// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpringSequence insertAt 1`] = `
Array [
  Array [
    0,
    0,
    0,
  ],
  Array [
    6.666666666666667,
    0,
    0,
  ],
  Array [
    13.333333333333334,
    0,
    0,
  ],
  Array [
    20,
    0,
    0,
  ],
  Array [
    26.666666666666668,
    0,
    0,
  ],
  Array [
    33.333333333333336,
    0,
    0,
  ],
  Array [
    40,
    0,
    0,
  ],
  Array [
    46.666666666666664,
    0,
    0,
  ],
  Array [
    53.333333333333336,
    0,
    0,
  ],
  Array [
    60,
    0,
    0,
  ],
  Array [
    66.66666666666667,
    0,
    0,
  ],
  Array [
    73.33333333333333,
    0,
    0,
  ],
  Array [
    80,
    0,
    0,
  ],
  Array [
    86.66666666666667,
    0,
    0,
  ],
  Array [
    93.33333333333333,
    0,
    0,
  ],
  Array [
    100,
    0,
    0,
  ],
  Array [
    106.66666666666667,
    0,
    0,
  ],
  Array [
    113.33333333333333,
    0,
    0,
  ],
  Array [
    120,
    0,
    0,
  ],
  Array [
    126.66666666666667,
    0,
    0,
  ],
  Array [
    133.33333333333334,
    0,
    0,
  ],
  Array [
    140,
    0,
    0,
  ],
  Array [
    146.66666666666666,
    0,
    0,
  ],
  Array [
    153.33333333333334,
    0,
    0,
  ],
  Array [
    160,
    0,
    0,
  ],
  Array [
    166.66666666666666,
    0,
    0,
  ],
  Array [
    173.33333333333334,
    0,
    0,
  ],
  Array [
    180,
    0,
    0,
  ],
  Array [
    186.66666666666666,
    0,
    0,
  ],
  Array [
    193.33333333333334,
    0,
    0,
  ],
  Array [
    200,
    0,
    0,
  ],
  Array [
    206.66666666666666,
    0.0853271484375,
    4.0169677734375,
  ],
  Array [
    213.33333333333334,
    0.3319091796875,
    7.704345703125,
  ],
  Array [
    220,
    0.7264404296875,
    11.0823974609375,
  ],
  Array [
    226.66666666666666,
    1.25628662109375,
    14.17041015625,
  ],
  Array [
    233.33333333333334,
    1.9097900390625,
    16.986328125,
  ],
  Array [
    240,
    2.67578125,
    19.54742431640625,
  ],
  Array [
    246.66666666666666,
    3.5440673828125,
    21.86981201171875,
  ],
  Array [
    253.33333333333334,
    4.50482177734375,
    23.96875,
  ],
  Array [
    260,
    5.54913330078125,
    25.858642578125,
  ],
  Array [
    266.6666666666667,
    6.66845703125,
    27.55316162109375,
  ],
  Array [
    273.3333333333333,
    7.8548583984375,
    29.065185546875,
  ],
  Array [
    280,
    9.10101318359375,
    30.40673828125,
  ],
  Array [
    286.6666666666667,
    10.4000244140625,
    31.58929443359375,
  ],
  Array [
    293.3333333333333,
    11.745361328125,
    32.62371826171875,
  ],
  Array [
    300,
    13.13116455078125,
    33.52001953125,
  ],
  Array [
    306.6666666666667,
    14.5517578125,
    34.2879638671875,
  ],
  Array [
    313.3333333333333,
    16.001953125,
    34.93646240234375,
  ],
  Array [
    320,
    17.47705078125,
    35.47406005859375,
  ],
  Array [
    326.6666666666667,
    18.972412109375,
    35.90875244140625,
  ],
  Array [
    333.3333333333333,
    20.4840087890625,
    36.248046875,
  ],
  Array [
    340,
    22.00787353515625,
    36.4991455078125,
  ],
  Array [
    346.6666666666667,
    23.54058837890625,
    36.6685791015625,
  ],
  Array [
    353.3333333333333,
    25.07879638671875,
    36.7626953125,
  ],
  Array [
    360,
    26.61944580078125,
    36.78741455078125,
  ],
  Array [
    366.6666666666667,
    28.1597900390625,
    36.74822998046875,
  ],
  Array [
    373.3333333333333,
    29.697265625,
    36.65032958984375,
  ],
  Array [
    380,
    31.22943115234375,
    36.4986572265625,
  ],
  Array [
    386.6666666666667,
    32.7542724609375,
    36.2977294921875,
  ],
  Array [
    393.3333333333333,
    34.26971435546875,
    36.0518798828125,
  ],
  Array [
    400,
    35.77392578125,
    35.76507568359375,
  ],
  Array [
    406.6666666666667,
    37.26544189453125,
    35.441162109375,
  ],
  Array [
    413.3333333333333,
    38.74261474609375,
    35.0836181640625,
  ],
  Array [
    420,
    40.20416259765625,
    34.69580078125,
  ],
  Array [
    426.6666666666667,
    41.64886474609375,
    34.28076171875,
  ],
  Array [
    433.3333333333333,
    43.07568359375,
    33.84136962890625,
  ],
  Array [
    440,
    44.483642578125,
    33.38031005859375,
  ],
  Array [
    446.6666666666667,
    45.87188720703125,
    32.900146484375,
  ],
  Array [
    453.3333333333333,
    47.23968505859375,
    32.4031982421875,
  ],
  Array [
    460,
    48.5863037109375,
    31.89166259765625,
  ],
  Array [
    466.6666666666667,
    49.9112548828125,
    31.36761474609375,
  ],
  Array [
    473.3333333333333,
    51.2139892578125,
    30.83282470703125,
  ],
  Array [
    480,
    52.49420166015625,
    30.28912353515625,
  ],
  Array [
    486.6666666666667,
    53.75140380859375,
    29.73822021484375,
  ],
  Array [
    493.3333333333333,
    54.98541259765625,
    29.18145751953125,
  ],
  Array [
    500,
    56.196044921875,
    28.620361328125,
  ],
  Array [
    506.6666666666667,
    57.383056640625,
    28.05621337890625,
  ],
  Array [
    513.3333333333334,
    58.54644775390625,
    27.49017333984375,
  ],
  Array [
    520,
    59.68609619140625,
    26.92333984375,
  ],
  Array [
    526.6666666666666,
    60.802001953125,
    26.35675048828125,
  ],
  Array [
    533.3333333333334,
    61.8941650390625,
    25.7913818359375,
  ],
  Array [
    540,
    62.96270751953125,
    25.22802734375,
  ],
  Array [
    546.6666666666666,
    64.0076904296875,
    24.66748046875,
  ],
  Array [
    553.3333333333334,
    65.029296875,
    24.11041259765625,
  ],
  Array [
    560,
    66.02764892578125,
    23.5576171875,
  ],
  Array [
    566.6666666666666,
    67.0029296875,
    23.00958251953125,
  ],
  Array [
    573.3333333333334,
    67.955322265625,
    22.46685791015625,
  ],
  Array [
    580,
    68.88519287109375,
    21.929931640625,
  ],
  Array [
    586.6666666666666,
    69.7926025390625,
    21.3992919921875,
  ],
  Array [
    593.3333333333334,
    70.677978515625,
    20.875244140625,
  ],
  Array [
    600,
    71.54156494140625,
    20.358154296875,
  ],
  Array [
    606.6666666666666,
    72.38360595703125,
    19.848388671875,
  ],
  Array [
    613.3333333333334,
    73.2044677734375,
    19.34619140625,
  ],
  Array [
    620,
    74.00445556640625,
    18.851806640625,
  ],
  Array [
    626.6666666666666,
    74.783935546875,
    18.36541748046875,
  ],
  Array [
    633.3333333333334,
    75.54315185546875,
    17.88720703125,
  ],
  Array [
    640,
    76.28253173828125,
    17.41729736328125,
  ],
  Array [
    646.6666666666666,
    77.00244140625,
    16.95587158203125,
  ],
  Array [
    653.3333333333334,
    77.70318603515625,
    16.50299072265625,
  ],
  Array [
    660,
    78.3851318359375,
    16.0587158203125,
  ],
  Array [
    666.6666666666666,
    79.04864501953125,
    15.6231689453125,
  ],
  Array [
    673.3333333333334,
    79.694091796875,
    15.1962890625,
  ],
  Array [
    680,
    80.32183837890625,
    14.77813720703125,
  ],
  Array [
    686.6666666666666,
    80.9322509765625,
    14.36871337890625,
  ],
  Array [
    693.3333333333334,
    81.52569580078125,
    13.968017578125,
  ],
  Array [
    700,
    82.1025390625,
    13.5760498046875,
  ],
  Array [
    706.6666666666666,
    82.66314697265625,
    13.19268798828125,
  ],
  Array [
    713.3333333333334,
    83.2078857421875,
    12.8179931640625,
  ],
  Array [
    720,
    83.73712158203125,
    12.4517822265625,
  ],
  Array [
    726.6666666666666,
    84.25115966796875,
    12.09405517578125,
  ],
  Array [
    733.3333333333334,
    84.75042724609375,
    11.7447509765625,
  ],
  Array [
    740,
    85.2352294921875,
    11.40374755859375,
  ],
  Array [
    746.6666666666666,
    85.7059326171875,
    11.0709228515625,
  ],
  Array [
    753.3333333333334,
    86.162841796875,
    10.74627685546875,
  ],
  Array [
    760,
    86.60626220703125,
    10.4295654296875,
  ],
  Array [
    766.6666666666666,
    87.03668212890625,
    10.12078857421875,
  ],
  Array [
    773.3333333333334,
    87.45428466796875,
    9.81976318359375,
  ],
  Array [
    780,
    87.85943603515625,
    9.52642822265625,
  ],
  Array [
    786.6666666666666,
    88.25244140625,
    9.24066162109375,
  ],
  Array [
    793.3333333333334,
    88.6336669921875,
    8.9622802734375,
  ],
  Array [
    800,
    89.00341796875,
    8.69122314453125,
  ],
  Array [
    806.6666666666666,
    89.36187744140625,
    8.42724609375,
  ],
  Array [
    813.3333333333334,
    89.70947265625,
    8.17034912109375,
  ],
  Array [
    820,
    90.04644775390625,
    7.92034912109375,
  ],
  Array [
    826.6666666666666,
    90.37310791015625,
    7.6771240234375,
  ],
  Array [
    833.3333333333334,
    90.689697265625,
    7.44049072265625,
  ],
  Array [
    840,
    90.99652099609375,
    7.21038818359375,
  ],
  Array [
    846.6666666666666,
    91.29388427734375,
    6.98663330078125,
  ],
  Array [
    853.3333333333334,
    91.58197021484375,
    6.76910400390625,
  ],
  Array [
    860,
    91.86102294921875,
    6.5576171875,
  ],
  Array [
    866.6666666666666,
    92.13140869140625,
    6.35211181640625,
  ],
  Array [
    873.3333333333334,
    92.39324951171875,
    6.1524658203125,
  ],
  Array [
    880,
    92.64691162109375,
    5.95849609375,
  ],
  Array [
    886.6666666666666,
    92.89251708984375,
    5.77008056640625,
  ],
  Array [
    893.3333333333334,
    93.13037109375,
    5.58709716796875,
  ],
  Array [
    900,
    93.36065673828125,
    5.409423828125,
  ],
  Array [
    906.6666666666666,
    93.5836181640625,
    5.2369384765625,
  ],
  Array [
    913.3333333333334,
    93.7994384765625,
    5.0694580078125,
  ],
  Array [
    920,
    94.0084228515625,
    4.90692138671875,
  ],
  Array [
    926.6666666666666,
    94.21063232421875,
    4.74920654296875,
  ],
  Array [
    933.3333333333334,
    94.40631103515625,
    4.59619140625,
  ],
  Array [
    940,
    94.595703125,
    4.44769287109375,
  ],
  Array [
    946.6666666666666,
    94.77899169921875,
    4.30364990234375,
  ],
  Array [
    953.3333333333334,
    94.956298828125,
    4.1639404296875,
  ],
  Array [
    960,
    95.12786865234375,
    4.02850341796875,
  ],
  Array [
    966.6666666666666,
    95.29388427734375,
    3.8970947265625,
  ],
  Array [
    973.3333333333334,
    95.45440673828125,
    3.76971435546875,
  ],
  Array [
    980,
    95.6097412109375,
    3.646240234375,
  ],
  Array [
    986.6666666666666,
    95.75994873046875,
    3.52655029296875,
  ],
  Array [
    993.3333333333334,
    95.90521240234375,
    3.41058349609375,
  ],
  Array [
    1000,
    96.04571533203125,
    3.29815673828125,
  ],
  Array [
    1006.6666666666666,
    96.35223388671875,
    11.22314453125,
  ],
  Array [
    1013.3333333333334,
    96.976806640625,
    18.4923095703125,
  ],
  Array [
    1020,
    97.892822265625,
    25.146240234375,
  ],
  Array [
    1026.6666666666667,
    99.07537841796875,
    31.22314453125,
  ],
  Array [
    1033.3333333333333,
    100.50103759765625,
    36.75909423828125,
  ],
  Array [
    1040,
    102.1478271484375,
    41.788330078125,
  ],
  Array [
    1046.6666666666667,
    103.9952392578125,
    46.34307861328125,
  ],
  Array [
    1053.3333333333333,
    106.0240478515625,
    50.45379638671875,
  ],
  Array [
    1060,
    108.21624755859375,
    54.14923095703125,
  ],
  Array [
    1066.6666666666667,
    110.5550537109375,
    57.45660400390625,
  ],
  Array [
    1073.3333333333333,
    113.024658203125,
    60.4014892578125,
  ],
  Array [
    1080,
    115.6104736328125,
    63.008056640625,
  ],
  Array [
    1086.6666666666667,
    118.298828125,
    65.29913330078125,
  ],
  Array [
    1093.3333333333333,
    121.076904296875,
    67.29620361328125,
  ],
  Array [
    1100,
    123.93280029296875,
    69.01953125,
  ],
  Array [
    1106.6666666666667,
    126.85546875,
    70.48822021484375,
  ],
  Array [
    1113.3333333333333,
    129.834716796875,
    71.72027587890625,
  ],
  Array [
    1120,
    132.86083984375,
    72.73260498046875,
  ],
  Array [
    1126.6666666666667,
    135.92510986328125,
    73.54119873046875,
  ],
  Array [
    1133.3333333333333,
    139.0191650390625,
    74.1610107421875,
  ],
  Array [
    1140,
    142.13555908203125,
    74.60626220703125,
  ],
  Array [
    1146.6666666666667,
    145.26715087890625,
    74.89013671875,
  ],
  Array [
    1153.3333333333333,
    148.407470703125,
    75.02520751953125,
  ],
  Array [
    1160,
    151.550537109375,
    75.02313232421875,
  ],
  Array [
    1166.6666666666667,
    154.6907958984375,
    74.89495849609375,
  ],
  Array [
    1173.3333333333333,
    157.82330322265625,
    74.65106201171875,
  ],
  Array [
    1180,
    160.94329833984375,
    74.3011474609375,
  ],
  Array [
    1186.6666666666667,
    164.04656982421875,
    73.85430908203125,
  ],
  Array [
    1193.3333333333333,
    167.1292724609375,
    73.319091796875,
  ],
  Array [
    1200,
    170.18780517578125,
    72.70355224609375,
  ],
  Array [
    1206.6666666666667,
    173.21905517578125,
    72.01507568359375,
  ],
  Array [
    1213.3333333333333,
    176.22003173828125,
    71.2607421875,
  ],
  Array [
    1220,
    179.1881103515625,
    70.44708251953125,
  ],
  Array [
    1226.6666666666667,
    182.12103271484375,
    69.580322265625,
  ],
  Array [
    1233.3333333333333,
    185.0166015625,
    68.66607666015625,
  ],
  Array [
    1240,
    187.87298583984375,
    67.709716796875,
  ],
  Array [
    1246.6666666666667,
    190.68853759765625,
    66.71630859375,
  ],
  Array [
    1253.3333333333333,
    193.4617919921875,
    65.6904296875,
  ],
  Array [
    1260,
    196.19140625,
    64.636474609375,
  ],
  Array [
    1266.6666666666667,
    198.87640380859375,
    63.5584716796875,
  ],
  Array [
    1273.3333333333333,
    201.51580810546875,
    62.4600830078125,
  ],
  Array [
    1280,
    204.10882568359375,
    61.3448486328125,
  ],
  Array [
    1286.6666666666667,
    206.65484619140625,
    60.216064453125,
  ],
  Array [
    1293.3333333333333,
    209.1533203125,
    59.07659912109375,
  ],
  Array [
    1300,
    211.6038818359375,
    57.9293212890625,
  ],
  Array [
    1306.6666666666667,
    214.00628662109375,
    56.7767333984375,
  ],
  Array [
    1313.3333333333333,
    216.3603515625,
    55.6212158203125,
  ],
  Array [
    1320,
    218.666015625,
    54.4649658203125,
  ],
  Array [
    1326.6666666666667,
    220.9232177734375,
    53.30999755859375,
  ],
  Array [
    1333.3333333333333,
    223.13214111328125,
    52.1580810546875,
  ],
  Array [
    1340,
    225.29290771484375,
    51.01104736328125,
  ],
  Array [
    1346.6666666666667,
    227.40570068359375,
    49.87030029296875,
  ],
  Array [
    1353.3333333333333,
    229.470947265625,
    48.73724365234375,
  ],
  Array [
    1360,
    231.48883056640625,
    47.61328125,
  ],
  Array [
    1366.6666666666667,
    233.45989990234375,
    46.49951171875,
  ],
  Array [
    1373.3333333333333,
    235.384521484375,
    45.39703369140625,
  ],
  Array [
    1380,
    237.26324462890625,
    44.30670166015625,
  ],
  Array [
    1386.6666666666667,
    239.0965576171875,
    43.22943115234375,
  ],
  Array [
    1393.3333333333333,
    240.885009765625,
    42.166015625,
  ],
  Array [
    1400,
    242.6292724609375,
    41.1170654296875,
  ],
  Array [
    1406.6666666666667,
    244.329833984375,
    40.083251953125,
  ],
  Array [
    1413.3333333333333,
    245.98748779296875,
    39.0650634765625,
  ],
  Array [
    1420,
    247.602783203125,
    38.06292724609375,
  ],
  Array [
    1426.6666666666667,
    249.17645263671875,
    37.0772705078125,
  ],
  Array [
    1433.3333333333333,
    250.709228515625,
    36.10845947265625,
  ],
  Array [
    1440,
    252.20172119140625,
    35.15673828125,
  ],
  Array [
    1446.6666666666667,
    253.65472412109375,
    34.2222900390625,
  ],
  Array [
    1453.3333333333333,
    255.0689697265625,
    33.30535888671875,
  ],
  Array [
    1460,
    256.44512939453125,
    32.40606689453125,
  ],
  Array [
    1466.6666666666667,
    257.7840576171875,
    31.5245361328125,
  ],
  Array [
    1473.3333333333333,
    259.08642578125,
    30.6607666015625,
  ],
  Array [
    1480,
    260.3529052734375,
    29.81488037109375,
  ],
  Array [
    1486.6666666666667,
    261.58441162109375,
    28.98675537109375,
  ],
  Array [
    1493.3333333333333,
    262.78155517578125,
    28.1763916015625,
  ],
  Array [
    1500,
    263.94512939453125,
    27.38372802734375,
  ],
  Array [
    1506.6666666666667,
    265.075927734375,
    26.608642578125,
  ],
  Array [
    1513.3333333333333,
    266.174560546875,
    25.85113525390625,
  ],
  Array [
    1520,
    267.2418212890625,
    25.1109619140625,
  ],
  Array [
    1526.6666666666667,
    268.27850341796875,
    24.3880615234375,
  ],
  Array [
    1533.3333333333333,
    269.28521728515625,
    23.68212890625,
  ],
  Array [
    1540,
    270.2626953125,
    22.9931640625,
  ],
  Array [
    1546.6666666666667,
    271.21173095703125,
    22.32080078125,
  ],
  Array [
    1553.3333333333333,
    272.13287353515625,
    21.66497802734375,
  ],
  Array [
    1560,
    273.02691650390625,
    21.02532958984375,
  ],
  Array [
    1566.6666666666667,
    273.89453125,
    20.4017333984375,
  ],
  Array [
    1573.3333333333333,
    274.736328125,
    19.79388427734375,
  ],
  Array [
    1580,
    275.552978515625,
    19.20166015625,
  ],
  Array [
    1586.6666666666667,
    276.34515380859375,
    18.6246337890625,
  ],
  Array [
    1593.3333333333333,
    277.113525390625,
    18.06268310546875,
  ],
  Array [
    1600,
    277.85858154296875,
    17.51544189453125,
  ],
  Array [
    1606.6666666666667,
    278.5810546875,
    16.98272705078125,
  ],
  Array [
    1613.3333333333333,
    279.28155517578125,
    16.4642333984375,
  ],
  Array [
    1620,
    279.9605712890625,
    15.959716796875,
  ],
  Array [
    1626.6666666666667,
    280.6187744140625,
    15.46893310546875,
  ],
  Array [
    1633.3333333333333,
    281.2567138671875,
    14.99151611328125,
  ],
  Array [
    1640,
    281.8748779296875,
    14.5272216796875,
  ],
  Array [
    1646.6666666666667,
    282.473876953125,
    14.0758056640625,
  ],
  Array [
    1653.3333333333333,
    283.05426025390625,
    13.636962890625,
  ],
  Array [
    1660,
    283.61651611328125,
    13.21044921875,
  ],
  Array [
    1666.6666666666667,
    284.1611328125,
    12.79595947265625,
  ],
  Array [
    1673.3333333333333,
    284.68865966796875,
    12.393310546875,
  ],
  Array [
    1680,
    285.1995849609375,
    12.0020751953125,
  ],
  Array [
    1686.6666666666667,
    285.6943359375,
    11.62213134765625,
  ],
  Array [
    1693.3333333333333,
    286.17340087890625,
    11.253173828125,
  ],
  Array [
    1700,
    286.63720703125,
    10.8948974609375,
  ],
  Array [
    1706.6666666666667,
    287.08624267578125,
    10.547119140625,
  ],
  Array [
    1713.3333333333333,
    287.52093505859375,
    10.20947265625,
  ],
  Array [
    1720,
    287.94171142578125,
    9.8818359375,
  ],
  Array [
    1726.6666666666667,
    288.34893798828125,
    9.56390380859375,
  ],
  Array [
    1733.3333333333333,
    288.7430419921875,
    9.25537109375,
  ],
  Array [
    1740,
    289.12445068359375,
    8.95611572265625,
  ],
  Array [
    1746.6666666666667,
    289.49346923828125,
    8.66583251953125,
  ],
  Array [
    1753.3333333333333,
    289.85052490234375,
    8.38427734375,
  ],
  Array [
    1760,
    290.19598388671875,
    8.1112060546875,
  ],
  Array [
    1766.6666666666667,
    290.53021240234375,
    7.84649658203125,
  ],
  Array [
    1773.3333333333333,
    290.85345458984375,
    7.58978271484375,
  ],
  Array [
    1780,
    291.1661376953125,
    7.34100341796875,
  ],
  Array [
    1786.6666666666667,
    291.46856689453125,
    7.09979248046875,
  ],
  Array [
    1793.3333333333333,
    291.76104736328125,
    6.86602783203125,
  ],
  Array [
    1800,
    292.04388427734375,
    6.6395263671875,
  ],
  Array [
    1806.6666666666667,
    292.3173828125,
    6.4200439453125,
  ],
  Array [
    1813.3333333333333,
    292.581787109375,
    6.2073974609375,
  ],
  Array [
    1820,
    292.83746337890625,
    6.00140380859375,
  ],
  Array [
    1826.6666666666667,
    293.08465576171875,
    5.80181884765625,
  ],
  Array [
    1833.3333333333333,
    293.3236083984375,
    5.60858154296875,
  ],
  Array [
    1840,
    293.55462646484375,
    5.42138671875,
  ],
  Array [
    1846.6666666666667,
    293.77789306640625,
    5.2401123046875,
  ],
  Array [
    1853.3333333333333,
    293.99371337890625,
    5.0645751953125,
  ],
  Array [
    1860,
    294.2022705078125,
    4.8946533203125,
  ],
  Array [
    1866.6666666666667,
    294.40380859375,
    4.73016357421875,
  ],
  Array [
    1873.3333333333333,
    294.5986328125,
    4.57086181640625,
  ],
  Array [
    1880,
    294.78680419921875,
    4.416748046875,
  ],
  Array [
    1886.6666666666667,
    294.96868896484375,
    4.26751708984375,
  ],
  Array [
    1893.3333333333333,
    295.1444091796875,
    4.1231689453125,
  ],
  Array [
    1900,
    295.314208984375,
    3.98345947265625,
  ],
  Array [
    1906.6666666666667,
    295.47821044921875,
    3.8482666015625,
  ],
  Array [
    1913.3333333333333,
    295.63665771484375,
    3.7174072265625,
  ],
  Array [
    1920,
    295.7896728515625,
    3.59088134765625,
  ],
  Array [
    1926.6666666666667,
    295.9375,
    3.46844482421875,
  ],
  Array [
    1933.3333333333333,
    296.080322265625,
    3.35003662109375,
  ],
  Array [
    1940,
    296.21820068359375,
    3.2354736328125,
  ],
  Array [
    1946.6666666666667,
    296.3514404296875,
    3.12469482421875,
  ],
  Array [
    1953.3333333333333,
    296.48004150390625,
    3.017578125,
  ],
  Array [
    1960,
    296.604248046875,
    2.9139404296875,
  ],
  Array [
    1966.6666666666667,
    296.7242431640625,
    2.81378173828125,
  ],
  Array [
    1973.3333333333333,
    296.84002685546875,
    2.7169189453125,
  ],
  Array [
    1980,
    296.95184326171875,
    2.62322998046875,
  ],
  Array [
    1986.6666666666667,
    297.059814453125,
    2.53271484375,
  ],
  Array [
    1993.3333333333333,
    297.1640625,
    2.4451904296875,
  ],
  Array [
    2000,
    297.26470947265625,
    2.36053466796875,
  ],
  Array [
    2006.6666666666667,
    297.10589599609375,
    -9.7720947265625,
  ],
  Array [
    2013.3333333333333,
    296.45989990234375,
    -20.913330078125,
  ],
  Array [
    2020,
    295.36688232421875,
    -31.12396240234375,
  ],
  Array [
    2026.6666666666667,
    293.8646240234375,
    -40.461669921875,
  ],
  Array [
    2033.3333333333333,
    291.98858642578125,
    -48.98089599609375,
  ],
  Array [
    2040,
    289.77191162109375,
    -56.73309326171875,
  ],
  Array [
    2046.6666666666667,
    287.24578857421875,
    -63.766845703125,
  ],
  Array [
    2053.3333333333335,
    284.439208984375,
    -70.12799072265625,
  ],
  Array [
    2060,
    281.3795166015625,
    -75.85992431640625,
  ],
  Array [
    2066.6666666666665,
    278.0921630859375,
    -81.0035400390625,
  ],
  Array [
    2073.3333333333335,
    274.60107421875,
    -85.5975341796875,
  ],
  Array [
    2080,
    270.9283447265625,
    -89.67828369140625,
  ],
  Array [
    2086.6666666666665,
    267.0948486328125,
    -93.2801513671875,
  ],
  Array [
    2093.3333333333335,
    263.11993408203125,
    -96.43560791015625,
  ],
  Array [
    2100,
    259.021728515625,
    -99.1751708984375,
  ],
  Array [
    2106.6666666666665,
    254.81689453125,
    -101.5277099609375,
  ],
  Array [
    2113.3333333333335,
    250.52117919921875,
    -103.52032470703125,
  ],
  Array [
    2120,
    246.1490478515625,
    -105.1785888671875,
  ],
  Array [
    2126.6666666666665,
    241.71405029296875,
    -106.526611328125,
  ],
  Array [
    2133.3333333333335,
    237.22869873046875,
    -107.5870361328125,
  ],
  Array [
    2140,
    232.70458984375,
    -108.38116455078125,
  ],
  Array [
    2146.6666666666665,
    228.15240478515625,
    -108.9290771484375,
  ],
  Array [
    2153.3333333333335,
    223.5821533203125,
    -109.2496337890625,
  ],
  Array [
    2160,
    219.00286865234375,
    -109.360595703125,
  ],
  Array [
    2166.6666666666665,
    214.423095703125,
    -109.27862548828125,
  ],
  Array [
    2173.3333333333335,
    209.8504638671875,
    -109.01934814453125,
  ],
  Array [
    2180,
    205.29217529296875,
    -108.597412109375,
  ],
  Array [
    2186.6666666666665,
    200.75469970703125,
    -108.026611328125,
  ],
  Array [
    2193.3333333333335,
    196.2440185546875,
    -107.3199462890625,
  ],
  Array [
    2200,
    191.765625,
    -106.4893798828125,
  ],
  Array [
    2206.6666666666665,
    187.3243408203125,
    -105.54644775390625,
  ],
  Array [
    2213.3333333333335,
    182.9248046875,
    -104.5015869140625,
  ],
  Array [
    2220,
    178.5709228515625,
    -103.3648681640625,
  ],
  Array [
    2226.6666666666665,
    174.2664794921875,
    -102.14556884765625,
  ],
  Array [
    2233.3333333333335,
    170.0146484375,
    -100.85235595703125,
  ],
  Array [
    2240,
    165.81842041015625,
    -99.49334716796875,
  ],
  Array [
    2246.6666666666665,
    161.68035888671875,
    -98.07611083984375,
  ],
  Array [
    2253.3333333333335,
    157.60272216796875,
    -96.607666015625,
  ],
  Array [
    2260,
    153.58758544921875,
    -95.0947265625,
  ],
  Array [
    2266.6666666666665,
    149.6365966796875,
    -93.5433349609375,
  ],
  Array [
    2273.3333333333335,
    145.7513427734375,
    -91.95916748046875,
  ],
  Array [
    2280,
    141.93304443359375,
    -90.3475341796875,
  ],
  Array [
    2286.6666666666665,
    138.1827392578125,
    -88.71337890625,
  ],
  Array [
    2293.3333333333335,
    134.50128173828125,
    -87.061279296875,
  ],
  Array [
    2300,
    130.8892822265625,
    -85.39544677734375,
  ],
  Array [
    2306.6666666666665,
    127.34735107421875,
    -83.71978759765625,
  ],
  Array [
    2313.3333333333335,
    123.87567138671875,
    -82.037841796875,
  ],
  Array [
    2320,
    120.47454833984375,
    -80.35302734375,
  ],
  Array [
    2326.6666666666665,
    117.14404296875,
    -78.66839599609375,
  ],
  Array [
    2333.3333333333335,
    113.884033203125,
    -76.98675537109375,
  ],
  Array [
    2340,
    110.6943359375,
    -75.31072998046875,
  ],
  Array [
    2346.6666666666665,
    107.57470703125,
    -73.642578125,
  ],
  Array [
    2353.3333333333335,
    104.52471923828125,
    -71.984619140625,
  ],
  Array [
    2360,
    101.5439453125,
    -70.3387451171875,
  ],
  Array [
    2366.6666666666665,
    98.6318359375,
    -68.70672607421875,
  ],
  Array [
    2373.3333333333335,
    95.78778076171875,
    -67.09027099609375,
  ],
  Array [
    2380,
    93.01104736328125,
    -65.4908447265625,
  ],
  Array [
    2386.6666666666665,
    90.30096435546875,
    -63.90966796875,
  ],
  Array [
    2393.3333333333335,
    87.65673828125,
    -62.34808349609375,
  ],
  Array [
    2400,
    85.07745361328125,
    -60.8070068359375,
  ],
  Array [
    2406.6666666666665,
    82.562255859375,
    -59.2874755859375,
  ],
  Array [
    2413.3333333333335,
    80.11029052734375,
    -57.790283203125,
  ],
  Array [
    2420,
    77.72052001953125,
    -56.316162109375,
  ],
  Array [
    2426.6666666666665,
    75.39202880859375,
    -54.86572265625,
  ],
  Array [
    2433.3333333333335,
    73.123779296875,
    -53.43951416015625,
  ],
  Array [
    2440,
    70.91473388671875,
    -52.0379638671875,
  ],
  Array [
    2446.6666666666665,
    68.76385498046875,
    -50.6614990234375,
  ],
  Array [
    2453.3333333333335,
    66.670166015625,
    -49.3104248046875,
  ],
  Array [
    2460,
    64.63250732421875,
    -47.98486328125,
  ],
  Array [
    2466.6666666666665,
    62.64984130859375,
    -46.68511962890625,
  ],
  Array [
    2473.3333333333335,
    60.7210693359375,
    -45.4112548828125,
  ],
  Array [
    2480,
    58.8450927734375,
    -44.16339111328125,
  ],
  Array [
    2486.6666666666665,
    57.0208740234375,
    -42.94140625,
  ],
  Array [
    2493.3333333333335,
    55.247314453125,
    -41.74542236328125,
  ],
  Array [
    2500,
    53.52325439453125,
    -40.57525634765625,
  ],
  Array [
    2506.6666666666665,
    51.84771728515625,
    -39.430908203125,
  ],
  Array [
    2513.3333333333335,
    50.21954345703125,
    -38.31207275390625,
  ],
  Array [
    2520,
    48.6376953125,
    -37.21875,
  ],
  Array [
    2526.6666666666665,
    47.10113525390625,
    -36.150634765625,
  ],
  Array [
    2533.3333333333335,
    45.60882568359375,
    -35.10748291015625,
  ],
  Array [
    2540,
    44.15966796875,
    -34.089111328125,
  ],
  Array [
    2546.6666666666665,
    42.75262451171875,
    -33.09521484375,
  ],
  Array [
    2553.3333333333335,
    41.38671875,
    -32.12548828125,
  ],
  Array [
    2560,
    40.06097412109375,
    -31.17962646484375,
  ],
  Array [
    2566.6666666666665,
    38.7742919921875,
    -30.25732421875,
  ],
  Array [
    2573.3333333333335,
    37.52581787109375,
    -29.35821533203125,
  ],
  Array [
    2580,
    36.314453125,
    -28.48193359375,
  ],
  Array [
    2586.6666666666665,
    35.139404296875,
    -27.628173828125,
  ],
  Array [
    2593.3333333333335,
    33.99957275390625,
    -26.7965087890625,
  ],
  Array [
    2600,
    32.8941650390625,
    -25.986572265625,
  ],
  Array [
    2606.6666666666665,
    31.822265625,
    -25.197998046875,
  ],
  Array [
    2613.3333333333335,
    30.78289794921875,
    -24.430419921875,
  ],
  Array [
    2620,
    29.7752685546875,
    -23.68341064453125,
  ],
  Array [
    2626.6666666666665,
    28.79852294921875,
    -22.95654296875,
  ],
  Array [
    2633.3333333333335,
    27.851806640625,
    -22.24951171875,
  ],
  Array [
    2640,
    26.93426513671875,
    -21.561767578125,
  ],
  Array [
    2646.6666666666665,
    26.045166015625,
    -20.89306640625,
  ],
  Array [
    2653.3333333333335,
    25.1837158203125,
    -20.242919921875,
  ],
  Array [
    2660,
    24.34906005859375,
    -19.6109619140625,
  ],
  Array [
    2666.6666666666665,
    23.54052734375,
    -18.996826171875,
  ],
  Array [
    2673.3333333333335,
    22.75732421875,
    -18.4000244140625,
  ],
  Array [
    2680,
    21.998779296875,
    -17.82025146484375,
  ],
  Array [
    2686.6666666666665,
    21.26422119140625,
    -17.257080078125,
  ],
  Array [
    2693.3333333333335,
    20.5528564453125,
    -16.7100830078125,
  ],
  Array [
    2700,
    19.86407470703125,
    -16.178955078125,
  ],
  Array [
    2706.6666666666665,
    19.197265625,
    -15.66326904296875,
  ],
  Array [
    2713.3333333333335,
    18.55169677734375,
    -15.1627197265625,
  ],
  Array [
    2720,
    17.9267578125,
    -14.67681884765625,
  ],
  Array [
    2726.6666666666665,
    17.3218994140625,
    -14.20526123046875,
  ],
  Array [
    2733.3333333333335,
    16.73651123046875,
    -13.74774169921875,
  ],
  Array [
    2740,
    16.16998291015625,
    -13.3038330078125,
  ],
  Array [
    2746.6666666666665,
    15.62176513671875,
    -12.8731689453125,
  ],
  Array [
    2753.3333333333335,
    15.09136962890625,
    -12.45550537109375,
  ],
  Array [
    2760,
    14.578125,
    -12.0504150390625,
  ],
  Array [
    2766.6666666666665,
    14.0816650390625,
    -11.65765380859375,
  ],
  Array [
    2773.3333333333335,
    13.601318359375,
    -11.27679443359375,
  ],
  Array [
    2780,
    13.13677978515625,
    -10.90753173828125,
  ],
  Array [
    2786.6666666666665,
    12.6873779296875,
    -10.54962158203125,
  ],
  Array [
    2793.3333333333335,
    12.2528076171875,
    -10.2027587890625,
  ],
  Array [
    2800,
    11.83251953125,
    -9.86651611328125,
  ],
  Array [
    2806.6666666666665,
    11.42608642578125,
    -9.540771484375,
  ],
  Array [
    2813.3333333333335,
    11.0330810546875,
    -9.22509765625,
  ],
  Array [
    2820,
    10.653076171875,
    -8.9193115234375,
  ],
  Array [
    2826.6666666666665,
    10.28570556640625,
    -8.623046875,
  ],
  Array [
    2833.3333333333335,
    9.9305419921875,
    -8.33612060546875,
  ],
  Array [
    2840,
    9.58721923828125,
    -8.05816650390625,
  ],
  Array [
    2846.6666666666665,
    9.25537109375,
    -7.78900146484375,
  ],
  Array [
    2853.3333333333335,
    8.9345703125,
    -7.52838134765625,
  ],
  Array [
    2860,
    8.62457275390625,
    -7.27606201171875,
  ],
  Array [
    2866.6666666666665,
    8.32489013671875,
    -7.03173828125,
  ],
  Array [
    2873.3333333333335,
    8.03533935546875,
    -6.79522705078125,
  ],
  Array [
    2880,
    7.75555419921875,
    -6.5662841796875,
  ],
  Array [
    2886.6666666666665,
    7.48516845703125,
    -6.34466552734375,
  ],
  Array [
    2893.3333333333335,
    7.223876953125,
    -6.1302490234375,
  ],
  Array [
    2900,
    6.97149658203125,
    -5.92266845703125,
  ],
  Array [
    2906.6666666666665,
    6.7276611328125,
    -5.72186279296875,
  ],
  Array [
    2913.3333333333335,
    6.4920654296875,
    -5.52752685546875,
  ],
  Array [
    2920,
    6.26446533203125,
    -5.33953857421875,
  ],
  Array [
    2926.6666666666665,
    6.04461669921875,
    -5.1575927734375,
  ],
  Array [
    2933.3333333333335,
    5.83233642578125,
    -4.981689453125,
  ],
  Array [
    2940,
    5.627197265625,
    -4.81146240234375,
  ],
  Array [
    2946.6666666666665,
    5.42913818359375,
    -4.6468505859375,
  ],
  Array [
    2953.3333333333335,
    5.23785400390625,
    -4.4876708984375,
  ],
  Array [
    2960,
    5.0531005859375,
    -4.33367919921875,
  ],
  Array [
    2966.6666666666665,
    4.87469482421875,
    -4.184814453125,
  ],
  Array [
    2973.3333333333335,
    4.70245361328125,
    -4.04083251953125,
  ],
  Array [
    2980,
    4.5361328125,
    -3.90167236328125,
  ],
  Array [
    2986.6666666666665,
    4.37554931640625,
    -3.76708984375,
  ],
  Array [
    2993.3333333333335,
    4.220458984375,
    -3.63702392578125,
  ],
  Array [
    3000,
    4.07080078125,
    -3.51123046875,
  ],
  Array [
    3006.6666666666665,
    3.92626953125,
    -3.3896484375,
  ],
  Array [
    3013.3333333333335,
    3.7867431640625,
    -3.27215576171875,
  ],
  Array [
    3020,
    3.652099609375,
    -3.15863037109375,
  ],
  Array [
    3026.6666666666665,
    3.5220947265625,
    -3.04888916015625,
  ],
  Array [
    3033.3333333333335,
    3.3966064453125,
    -2.94281005859375,
  ],
  Array [
    3040,
    3.2755126953125,
    -2.84033203125,
  ],
  Array [
    3046.6666666666665,
    3.15863037109375,
    -2.74127197265625,
  ],
  Array [
    3053.3333333333335,
    3.0457763671875,
    -2.64556884765625,
  ],
  Array [
    3060,
    2.93695068359375,
    -2.5531005859375,
  ],
  Array [
    3066.6666666666665,
    2.83184814453125,
    -2.46380615234375,
  ],
  Array [
    3073.3333333333335,
    2.73046875,
    -2.37750244140625,
  ],
  Array [
    3080,
    2.63262939453125,
    -2.294189453125,
  ],
  Array [
    3086.6666666666665,
    2.5382080078125,
    -2.213623046875,
  ],
  Array [
    3093.3333333333335,
    2.4471435546875,
    -2.1358642578125,
  ],
  Array [
    3100,
    2.3592529296875,
    -2.060791015625,
  ],
  Array [
    3106.6666666666665,
    2.27447509765625,
    -1.98822021484375,
  ],
  Array [
    3113.3333333333335,
    2.19268798828125,
    -1.91815185546875,
  ],
  Array [
    3120,
    2.11376953125,
    -1.8504638671875,
  ],
  Array [
    3126.6666666666665,
    2.03759765625,
    -1.78515625,
  ],
  Array [
    3133.3333333333335,
    1.96417236328125,
    -1.7220458984375,
  ],
  Array [
    3140,
    1.893310546875,
    -1.6611328125,
  ],
  Array [
    3146.6666666666665,
    1.824951171875,
    -1.602294921875,
  ],
  Array [
    3153.3333333333335,
    1.759033203125,
    -1.5455322265625,
  ],
  Array [
    3160,
    1.6954345703125,
    -1.49072265625,
  ],
  Array [
    3166.6666666666665,
    1.6341552734375,
    -1.43780517578125,
  ],
  Array [
    3173.3333333333335,
    1.57501220703125,
    -1.38665771484375,
  ],
  Array [
    3180,
    1.5179443359375,
    -1.33734130859375,
  ],
  Array [
    3186.6666666666665,
    1.46295166015625,
    -1.28973388671875,
  ],
  Array [
    3193.3333333333335,
    1.40985107421875,
    -1.2437744140625,
  ],
  Array [
    3200,
    1.35870361328125,
    -1.199462890625,
  ],
  Array [
    3206.6666666666665,
    1.30938720703125,
    -1.1566162109375,
  ],
  Array [
    3213.3333333333335,
    1.26177978515625,
    -1.1153564453125,
  ],
  Array [
    3220,
    1.21588134765625,
    -1.075439453125,
  ],
  Array [
    3226.6666666666665,
    1.17169189453125,
    -1.0369873046875,
  ],
  Array [
    3233.3333333333335,
    1.1290283203125,
    -0.9998779296875,
  ],
  Array [
    3240,
    1.087890625,
    -0.96405029296875,
  ],
  Array [
    3246.6666666666665,
    1.0482177734375,
    -0.929443359375,
  ],
  Array [
    3253.3333333333335,
    1.010009765625,
    -0.8961181640625,
  ],
  Array [
    3260,
    0.97314453125,
    -0.8638916015625,
  ],
  Array [
    3266.6666666666665,
    0.9376220703125,
    -0.8328857421875,
  ],
  Array [
    3273.3333333333335,
    0.90338134765625,
    -0.80291748046875,
  ],
  Array [
    3280,
    0.87030029296875,
    -0.77398681640625,
  ],
  Array [
    3286.6666666666665,
    0.8385009765625,
    -0.74609375,
  ],
  Array [
    3293.3333333333335,
    0.80780029296875,
    -0.71923828125,
  ],
  Array [
    3300,
    0.77825927734375,
    -0.69329833984375,
  ],
  Array [
    3306.6666666666665,
    0.74969482421875,
    -0.66827392578125,
  ],
  Array [
    3313.3333333333335,
    0.72222900390625,
    -0.64410400390625,
  ],
  Array [
    3320,
    0.69573974609375,
    -0.620849609375,
  ],
  Array [
    3326.6666666666665,
    0.67022705078125,
    -0.598388671875,
  ],
  Array [
    3333.3333333333335,
    0.6456298828125,
    -0.57672119140625,
  ],
  Array [
    3340,
    0.62188720703125,
    -0.5557861328125,
  ],
  Array [
    3346.6666666666665,
    0.59906005859375,
    -0.53564453125,
  ],
  Array [
    3353.3333333333335,
    0.5770263671875,
    -0.5162353515625,
  ],
  Array [
    3360,
    0.5557861328125,
    -0.49749755859375,
  ],
  Array [
    3366.6666666666665,
    0.53533935546875,
    -0.47943115234375,
  ],
  Array [
    3373.3333333333335,
    0.515625,
    -0.4620361328125,
  ],
  Array [
    3380,
    0.49658203125,
    -0.4451904296875,
  ],
  Array [
    3386.6666666666665,
    0.478271484375,
    -0.42901611328125,
  ],
  Array [
    3393.3333333333335,
    0.46063232421875,
    -0.41339111328125,
  ],
  Array [
    3400,
    0.44366455078125,
    -0.3983154296875,
  ],
  Array [
    3406.6666666666665,
    0.42724609375,
    -0.3837890625,
  ],
  Array [
    3413.3333333333335,
    0.4114990234375,
    -0.36981201171875,
  ],
  Array [
    3420,
    0.39630126953125,
    -0.3563232421875,
  ],
  Array [
    3426.6666666666665,
    0.38165283203125,
    -0.34332275390625,
  ],
  Array [
    3433.3333333333335,
    0.36749267578125,
    -0.33074951171875,
  ],
  Array [
    3440,
    0.35394287109375,
    -0.31866455078125,
  ],
  Array [
    3446.6666666666665,
    0.3408203125,
    -0.3070068359375,
  ],
  Array [
    3453.3333333333335,
    0.32818603515625,
    -0.2957763671875,
  ],
  Array [
    3460,
    0.3160400390625,
    -0.28497314453125,
  ],
  Array [
    3466.6666666666665,
    0.3043212890625,
    -0.27447509765625,
  ],
  Array [
    3473.3333333333335,
    0.29302978515625,
    -0.26446533203125,
  ],
  Array [
    3480,
    0.28216552734375,
    -0.2547607421875,
  ],
  Array [
    3486.6666666666665,
    0.27166748046875,
    -0.245361328125,
  ],
  Array [
    3493.3333333333335,
    0.2615966796875,
    -0.23638916015625,
  ],
  Array [
    3500,
    0.25189208984375,
    -0.22772216796875,
  ],
  Array [
    3506.6666666666665,
    0.24249267578125,
    -0.21929931640625,
  ],
  Array [
    3513.3333333333335,
    0.2335205078125,
    -0.21124267578125,
  ],
  Array [
    3520,
    0.22479248046875,
    -0.2034912109375,
  ],
  Array [
    3526.6666666666665,
    0.2164306640625,
    -0.19598388671875,
  ],
  Array [
    3533.3333333333335,
    0.2083740234375,
    -0.18878173828125,
  ],
  Array [
    3540,
    0.20062255859375,
    -0.18182373046875,
  ],
  Array [
    3546.6666666666665,
    0.19317626953125,
    -0.17510986328125,
  ],
  Array [
    3553.3333333333335,
    0.18597412109375,
    -0.16864013671875,
  ],
  Array [
    3560,
    0.17901611328125,
    -0.16241455078125,
  ],
  Array [
    3566.6666666666665,
    0.17236328125,
    -0.15643310546875,
  ],
  Array [
    3573.3333333333335,
    0.1658935546875,
    -0.150634765625,
  ],
  Array [
    3580,
    0.15972900390625,
    -0.14508056640625,
  ],
  Array [
    3586.6666666666665,
    0.15374755859375,
    -0.13970947265625,
  ],
  Array [
    3593.3333333333335,
    0.14801025390625,
    -0.13458251953125,
  ],
  Array [
    3600,
    0.1424560546875,
    -0.12957763671875,
  ],
  Array [
    3606.6666666666665,
    0.13714599609375,
    -0.124755859375,
  ],
  Array [
    3613.3333333333335,
    0.13201904296875,
    -0.12017822265625,
  ],
  Array [
    3620,
    0.1270751953125,
    -0.11572265625,
  ],
  Array [
    3626.6666666666665,
    0.122314453125,
    -0.11138916015625,
  ],
  Array [
    3633.3333333333335,
    0.11773681640625,
    -0.1072998046875,
  ],
  Array [
    3640,
    0.11334228515625,
    -0.10333251953125,
  ],
  Array [
    3646.6666666666665,
    0.10906982421875,
    -0.0994873046875,
  ],
  Array [
    3653.3333333333335,
    0.10498046875,
    -0.09576416015625,
  ],
  Array [
    3660,
    0.10107421875,
    -0.09222412109375,
  ],
  Array [
    3666.6666666666665,
    0.0972900390625,
    -0.08880615234375,
  ],
  Array [
    3673.3333333333335,
    0.0936279296875,
    -0.08551025390625,
  ],
  Array [
    3680,
    0.090087890625,
    -0.08233642578125,
  ],
  Array [
    3686.6666666666665,
    0.08673095703125,
    -0.0792236328125,
  ],
  Array [
    3693.3333333333335,
    0.08349609375,
    -0.0762939453125,
  ],
  Array [
    3700,
    0.080322265625,
    -0.07342529296875,
  ],
  Array [
    3706.6666666666665,
    0.07733154296875,
    -0.07073974609375,
  ],
  Array [
    3713.3333333333335,
    0.07440185546875,
    -0.06805419921875,
  ],
  Array [
    3720,
    0.07159423828125,
    -0.0655517578125,
  ],
  Array [
    3726.6666666666665,
    0.06890869140625,
    -0.0631103515625,
  ],
  Array [
    3733.3333333333335,
    0.06634521484375,
    -0.06072998046875,
  ],
  Array [
    3740,
    0.0638427734375,
    -0.0584716796875,
  ],
  Array [
    3746.6666666666665,
    0.0614013671875,
    -0.0562744140625,
  ],
  Array [
    3753.3333333333335,
    0.05908203125,
    -0.05419921875,
  ],
  Array [
    3760,
    0.056884765625,
    -0.05218505859375,
  ],
  Array [
    3766.6666666666665,
    0.05474853515625,
    -0.05023193359375,
  ],
  Array [
    3773.3333333333335,
    0.05267333984375,
    -0.04833984375,
  ],
  Array [
    3780,
    0.0506591796875,
    -0.0465087890625,
  ],
  Array [
    3786.6666666666665,
    0.04876708984375,
    -0.0447998046875,
  ],
  Array [
    3793.3333333333335,
    0.04693603515625,
    -0.0430908203125,
  ],
  Array [
    3800,
    0.045166015625,
    -0.04150390625,
  ],
  Array [
    3806.6666666666665,
    0.04345703125,
    -0.0399169921875,
  ],
  Array [
    3813.3333333333335,
    0.04180908203125,
    -0.0384521484375,
  ],
  Array [
    3820,
    0.04022216796875,
    -0.0369873046875,
  ],
  Array [
    3826.6666666666665,
    0.0386962890625,
    -0.03558349609375,
  ],
  Array [
    3833.3333333333335,
    0.0372314453125,
    -0.0343017578125,
  ],
  Array [
    3840,
    0.03582763671875,
    -0.032958984375,
  ],
  Array [
    3846.6666666666665,
    0.03448486328125,
    -0.03173828125,
  ],
  Array [
    3853.3333333333335,
    0.033203125,
    -0.03057861328125,
  ],
  Array [
    3860,
    0.03192138671875,
    -0.0294189453125,
  ],
  Array [
    3866.6666666666665,
    0.03070068359375,
    -0.0283203125,
  ],
  Array [
    3873.3333333333335,
    0.029541015625,
    -0.0272216796875,
  ],
  Array [
    3880,
    0.0284423828125,
    -0.0262451171875,
  ],
  Array [
    3886.6666666666665,
    0.02734375,
    -0.02520751953125,
  ],
  Array [
    3893.3333333333335,
    0.02630615234375,
    -0.0242919921875,
  ],
  Array [
    3900,
    0.02532958984375,
    -0.02337646484375,
  ],
  Array [
    3906.6666666666665,
    0.02435302734375,
    -0.0224609375,
  ],
  Array [
    3913.3333333333335,
    0.0234375,
    -0.02166748046875,
  ],
  Array [
    3920,
    0.02252197265625,
    -0.02081298828125,
  ],
  Array [
    3926.6666666666665,
    0.02166748046875,
    -0.02001953125,
  ],
  Array [
    3933.3333333333335,
    0.0208740234375,
    -0.019287109375,
  ],
  Array [
    3940,
    0.02008056640625,
    -0.0185546875,
  ],
  Array [
    3946.6666666666665,
    0.019287109375,
    -0.01788330078125,
  ],
  Array [
    3953.3333333333335,
    0.0185546875,
    -0.0172119140625,
  ],
  Array [
    3960,
    0.01788330078125,
    -0.01654052734375,
  ],
  Array [
    3966.6666666666665,
    0.0172119140625,
    -0.01593017578125,
  ],
  Array [
    3973.3333333333335,
    0.01654052734375,
    -0.01531982421875,
  ],
  Array [
    3980,
    0.01593017578125,
    -0.01470947265625,
  ],
  Array [
    3986.6666666666665,
    0.01531982421875,
    -0.01416015625,
  ],
  Array [
    3993.3333333333335,
    0.01470947265625,
    -0.01361083984375,
  ],
  Array [
    4000,
    0.01416015625,
    -0.01312255859375,
  ],
]
`;

exports[`SpringSequence replaceTail 1`] = `
Array [
  Array [
    0,
    0,
    0,
  ],
  Array [
    6.666666666666667,
    0,
    0,
  ],
  Array [
    13.333333333333334,
    0,
    0,
  ],
  Array [
    20,
    0,
    0,
  ],
  Array [
    26.666666666666668,
    0,
    0,
  ],
  Array [
    33.333333333333336,
    0,
    0,
  ],
  Array [
    40,
    0,
    0,
  ],
  Array [
    46.666666666666664,
    0,
    0,
  ],
  Array [
    53.333333333333336,
    0,
    0,
  ],
  Array [
    60,
    0,
    0,
  ],
  Array [
    66.66666666666667,
    0,
    0,
  ],
  Array [
    73.33333333333333,
    0,
    0,
  ],
  Array [
    80,
    0,
    0,
  ],
  Array [
    86.66666666666667,
    0,
    0,
  ],
  Array [
    93.33333333333333,
    0,
    0,
  ],
  Array [
    100,
    0,
    0,
  ],
  Array [
    106.66666666666667,
    0,
    0,
  ],
  Array [
    113.33333333333333,
    0,
    0,
  ],
  Array [
    120,
    0,
    0,
  ],
  Array [
    126.66666666666667,
    0,
    0,
  ],
  Array [
    133.33333333333334,
    0,
    0,
  ],
  Array [
    140,
    0,
    0,
  ],
  Array [
    146.66666666666666,
    0,
    0,
  ],
  Array [
    153.33333333333334,
    0,
    0,
  ],
  Array [
    160,
    0,
    0,
  ],
  Array [
    166.66666666666666,
    0,
    0,
  ],
  Array [
    173.33333333333334,
    0,
    0,
  ],
  Array [
    180,
    0,
    0,
  ],
  Array [
    186.66666666666666,
    0,
    0,
  ],
  Array [
    193.33333333333334,
    0,
    0,
  ],
  Array [
    200,
    0,
    0,
  ],
  Array [
    206.66666666666666,
    0.0853271484375,
    4.0169677734375,
  ],
  Array [
    213.33333333333334,
    0.3319091796875,
    7.704345703125,
  ],
  Array [
    220,
    0.7264404296875,
    11.0823974609375,
  ],
  Array [
    226.66666666666666,
    1.25628662109375,
    14.17041015625,
  ],
  Array [
    233.33333333333334,
    1.9097900390625,
    16.986328125,
  ],
  Array [
    240,
    2.67578125,
    19.54742431640625,
  ],
  Array [
    246.66666666666666,
    3.5440673828125,
    21.86981201171875,
  ],
  Array [
    253.33333333333334,
    4.50482177734375,
    23.96875,
  ],
  Array [
    260,
    5.54913330078125,
    25.858642578125,
  ],
  Array [
    266.6666666666667,
    6.66845703125,
    27.55316162109375,
  ],
  Array [
    273.3333333333333,
    7.8548583984375,
    29.065185546875,
  ],
  Array [
    280,
    9.10101318359375,
    30.40673828125,
  ],
  Array [
    286.6666666666667,
    10.4000244140625,
    31.58929443359375,
  ],
  Array [
    293.3333333333333,
    11.745361328125,
    32.62371826171875,
  ],
  Array [
    300,
    13.13116455078125,
    33.52001953125,
  ],
  Array [
    306.6666666666667,
    14.5517578125,
    34.2879638671875,
  ],
  Array [
    313.3333333333333,
    16.001953125,
    34.93646240234375,
  ],
  Array [
    320,
    17.47705078125,
    35.47406005859375,
  ],
  Array [
    326.6666666666667,
    18.972412109375,
    35.90875244140625,
  ],
  Array [
    333.3333333333333,
    20.4840087890625,
    36.248046875,
  ],
  Array [
    340,
    22.00787353515625,
    36.4991455078125,
  ],
  Array [
    346.6666666666667,
    23.54058837890625,
    36.6685791015625,
  ],
  Array [
    353.3333333333333,
    25.07879638671875,
    36.7626953125,
  ],
  Array [
    360,
    26.61944580078125,
    36.78741455078125,
  ],
  Array [
    366.6666666666667,
    28.1597900390625,
    36.74822998046875,
  ],
  Array [
    373.3333333333333,
    29.697265625,
    36.65032958984375,
  ],
  Array [
    380,
    31.22943115234375,
    36.4986572265625,
  ],
  Array [
    386.6666666666667,
    32.7542724609375,
    36.2977294921875,
  ],
  Array [
    393.3333333333333,
    34.26971435546875,
    36.0518798828125,
  ],
  Array [
    400,
    35.77392578125,
    35.76507568359375,
  ],
  Array [
    406.6666666666667,
    37.26544189453125,
    35.441162109375,
  ],
  Array [
    413.3333333333333,
    38.74261474609375,
    35.0836181640625,
  ],
  Array [
    420,
    40.20416259765625,
    34.69580078125,
  ],
  Array [
    426.6666666666667,
    41.64886474609375,
    34.28076171875,
  ],
  Array [
    433.3333333333333,
    43.07568359375,
    33.84136962890625,
  ],
  Array [
    440,
    44.483642578125,
    33.38031005859375,
  ],
  Array [
    446.6666666666667,
    45.87188720703125,
    32.900146484375,
  ],
  Array [
    453.3333333333333,
    47.23968505859375,
    32.4031982421875,
  ],
  Array [
    460,
    48.5863037109375,
    31.89166259765625,
  ],
  Array [
    466.6666666666667,
    49.9112548828125,
    31.36761474609375,
  ],
  Array [
    473.3333333333333,
    51.2139892578125,
    30.83282470703125,
  ],
  Array [
    480,
    52.49420166015625,
    30.28912353515625,
  ],
  Array [
    486.6666666666667,
    53.75140380859375,
    29.73822021484375,
  ],
  Array [
    493.3333333333333,
    54.98541259765625,
    29.18145751953125,
  ],
  Array [
    500,
    56.196044921875,
    28.620361328125,
  ],
  Array [
    506.6666666666667,
    57.383056640625,
    28.05621337890625,
  ],
  Array [
    513.3333333333334,
    58.54644775390625,
    27.49017333984375,
  ],
  Array [
    520,
    59.68609619140625,
    26.92333984375,
  ],
  Array [
    526.6666666666666,
    60.802001953125,
    26.35675048828125,
  ],
  Array [
    533.3333333333334,
    61.8941650390625,
    25.7913818359375,
  ],
  Array [
    540,
    62.96270751953125,
    25.22802734375,
  ],
  Array [
    546.6666666666666,
    64.0076904296875,
    24.66748046875,
  ],
  Array [
    553.3333333333334,
    65.029296875,
    24.11041259765625,
  ],
  Array [
    560,
    66.02764892578125,
    23.5576171875,
  ],
  Array [
    566.6666666666666,
    67.0029296875,
    23.00958251953125,
  ],
  Array [
    573.3333333333334,
    67.955322265625,
    22.46685791015625,
  ],
  Array [
    580,
    68.88519287109375,
    21.929931640625,
  ],
  Array [
    586.6666666666666,
    69.7926025390625,
    21.3992919921875,
  ],
  Array [
    593.3333333333334,
    70.677978515625,
    20.875244140625,
  ],
  Array [
    600,
    71.54156494140625,
    20.358154296875,
  ],
  Array [
    606.6666666666666,
    72.38360595703125,
    19.848388671875,
  ],
  Array [
    613.3333333333334,
    73.2044677734375,
    19.34619140625,
  ],
  Array [
    620,
    74.00445556640625,
    18.851806640625,
  ],
  Array [
    626.6666666666666,
    74.783935546875,
    18.36541748046875,
  ],
  Array [
    633.3333333333334,
    75.54315185546875,
    17.88720703125,
  ],
  Array [
    640,
    76.28253173828125,
    17.41729736328125,
  ],
  Array [
    646.6666666666666,
    77.00244140625,
    16.95587158203125,
  ],
  Array [
    653.3333333333334,
    77.70318603515625,
    16.50299072265625,
  ],
  Array [
    660,
    78.3851318359375,
    16.0587158203125,
  ],
  Array [
    666.6666666666666,
    79.04864501953125,
    15.6231689453125,
  ],
  Array [
    673.3333333333334,
    79.694091796875,
    15.1962890625,
  ],
  Array [
    680,
    80.32183837890625,
    14.77813720703125,
  ],
  Array [
    686.6666666666666,
    80.9322509765625,
    14.36871337890625,
  ],
  Array [
    693.3333333333334,
    81.52569580078125,
    13.968017578125,
  ],
  Array [
    700,
    82.1025390625,
    13.5760498046875,
  ],
  Array [
    706.6666666666666,
    82.66314697265625,
    13.19268798828125,
  ],
  Array [
    713.3333333333334,
    83.2078857421875,
    12.8179931640625,
  ],
  Array [
    720,
    83.73712158203125,
    12.4517822265625,
  ],
  Array [
    726.6666666666666,
    84.25115966796875,
    12.09405517578125,
  ],
  Array [
    733.3333333333334,
    84.75042724609375,
    11.7447509765625,
  ],
  Array [
    740,
    85.2352294921875,
    11.40374755859375,
  ],
  Array [
    746.6666666666666,
    85.7059326171875,
    11.0709228515625,
  ],
  Array [
    753.3333333333334,
    86.162841796875,
    10.74627685546875,
  ],
  Array [
    760,
    86.60626220703125,
    10.4295654296875,
  ],
  Array [
    766.6666666666666,
    87.03668212890625,
    10.12078857421875,
  ],
  Array [
    773.3333333333334,
    87.45428466796875,
    9.81976318359375,
  ],
  Array [
    780,
    87.85943603515625,
    9.52642822265625,
  ],
  Array [
    786.6666666666666,
    88.25244140625,
    9.24066162109375,
  ],
  Array [
    793.3333333333334,
    88.6336669921875,
    8.9622802734375,
  ],
  Array [
    800,
    89.00341796875,
    8.69122314453125,
  ],
  Array [
    806.6666666666666,
    89.36187744140625,
    8.42724609375,
  ],
  Array [
    813.3333333333334,
    89.70947265625,
    8.17034912109375,
  ],
  Array [
    820,
    90.04644775390625,
    7.92034912109375,
  ],
  Array [
    826.6666666666666,
    90.37310791015625,
    7.6771240234375,
  ],
  Array [
    833.3333333333334,
    90.689697265625,
    7.44049072265625,
  ],
  Array [
    840,
    90.99652099609375,
    7.21038818359375,
  ],
  Array [
    846.6666666666666,
    91.29388427734375,
    6.98663330078125,
  ],
  Array [
    853.3333333333334,
    91.58197021484375,
    6.76910400390625,
  ],
  Array [
    860,
    91.86102294921875,
    6.5576171875,
  ],
  Array [
    866.6666666666666,
    92.13140869140625,
    6.35211181640625,
  ],
  Array [
    873.3333333333334,
    92.39324951171875,
    6.1524658203125,
  ],
  Array [
    880,
    92.64691162109375,
    5.95849609375,
  ],
  Array [
    886.6666666666666,
    92.89251708984375,
    5.77008056640625,
  ],
  Array [
    893.3333333333334,
    93.13037109375,
    5.58709716796875,
  ],
  Array [
    900,
    93.36065673828125,
    5.409423828125,
  ],
  Array [
    906.6666666666666,
    93.5836181640625,
    5.2369384765625,
  ],
  Array [
    913.3333333333334,
    93.7994384765625,
    5.0694580078125,
  ],
  Array [
    920,
    94.0084228515625,
    4.90692138671875,
  ],
  Array [
    926.6666666666666,
    94.21063232421875,
    4.74920654296875,
  ],
  Array [
    933.3333333333334,
    94.40631103515625,
    4.59619140625,
  ],
  Array [
    940,
    94.595703125,
    4.44769287109375,
  ],
  Array [
    946.6666666666666,
    94.77899169921875,
    4.30364990234375,
  ],
  Array [
    953.3333333333334,
    94.956298828125,
    4.1639404296875,
  ],
  Array [
    960,
    95.12786865234375,
    4.02850341796875,
  ],
  Array [
    966.6666666666666,
    95.29388427734375,
    3.8970947265625,
  ],
  Array [
    973.3333333333334,
    95.45440673828125,
    3.76971435546875,
  ],
  Array [
    980,
    95.6097412109375,
    3.646240234375,
  ],
  Array [
    986.6666666666666,
    95.75994873046875,
    3.52655029296875,
  ],
  Array [
    993.3333333333334,
    95.90521240234375,
    3.41058349609375,
  ],
  Array [
    1000,
    96.04571533203125,
    3.29815673828125,
  ],
  Array [
    1006.6666666666666,
    96.35223388671875,
    11.22314453125,
  ],
  Array [
    1013.3333333333334,
    96.976806640625,
    18.4923095703125,
  ],
  Array [
    1020,
    97.892822265625,
    25.146240234375,
  ],
  Array [
    1026.6666666666667,
    99.07537841796875,
    31.22314453125,
  ],
  Array [
    1033.3333333333333,
    100.50103759765625,
    36.75909423828125,
  ],
  Array [
    1040,
    102.1478271484375,
    41.788330078125,
  ],
  Array [
    1046.6666666666667,
    103.9952392578125,
    46.34307861328125,
  ],
  Array [
    1053.3333333333333,
    106.0240478515625,
    50.45379638671875,
  ],
  Array [
    1060,
    108.21624755859375,
    54.14923095703125,
  ],
  Array [
    1066.6666666666667,
    110.5550537109375,
    57.45660400390625,
  ],
  Array [
    1073.3333333333333,
    113.024658203125,
    60.4014892578125,
  ],
  Array [
    1080,
    115.6104736328125,
    63.008056640625,
  ],
  Array [
    1086.6666666666667,
    118.298828125,
    65.29913330078125,
  ],
  Array [
    1093.3333333333333,
    121.076904296875,
    67.29620361328125,
  ],
  Array [
    1100,
    123.93280029296875,
    69.01953125,
  ],
  Array [
    1106.6666666666667,
    126.85546875,
    70.48822021484375,
  ],
  Array [
    1113.3333333333333,
    129.834716796875,
    71.72027587890625,
  ],
  Array [
    1120,
    132.86083984375,
    72.73260498046875,
  ],
  Array [
    1126.6666666666667,
    135.92510986328125,
    73.54119873046875,
  ],
  Array [
    1133.3333333333333,
    139.0191650390625,
    74.1610107421875,
  ],
  Array [
    1140,
    142.13555908203125,
    74.60626220703125,
  ],
  Array [
    1146.6666666666667,
    145.26715087890625,
    74.89013671875,
  ],
  Array [
    1153.3333333333333,
    148.407470703125,
    75.02520751953125,
  ],
  Array [
    1160,
    151.550537109375,
    75.02313232421875,
  ],
  Array [
    1166.6666666666667,
    154.6907958984375,
    74.89495849609375,
  ],
  Array [
    1173.3333333333333,
    157.82330322265625,
    74.65106201171875,
  ],
  Array [
    1180,
    160.94329833984375,
    74.3011474609375,
  ],
  Array [
    1186.6666666666667,
    164.04656982421875,
    73.85430908203125,
  ],
  Array [
    1193.3333333333333,
    167.1292724609375,
    73.319091796875,
  ],
  Array [
    1200,
    170.18780517578125,
    72.70355224609375,
  ],
  Array [
    1206.6666666666667,
    173.21905517578125,
    72.01507568359375,
  ],
  Array [
    1213.3333333333333,
    176.22003173828125,
    71.2607421875,
  ],
  Array [
    1220,
    179.1881103515625,
    70.44708251953125,
  ],
  Array [
    1226.6666666666667,
    182.12103271484375,
    69.580322265625,
  ],
  Array [
    1233.3333333333333,
    185.0166015625,
    68.66607666015625,
  ],
  Array [
    1240,
    187.87298583984375,
    67.709716796875,
  ],
  Array [
    1246.6666666666667,
    190.68853759765625,
    66.71630859375,
  ],
  Array [
    1253.3333333333333,
    193.4617919921875,
    65.6904296875,
  ],
  Array [
    1260,
    196.19140625,
    64.636474609375,
  ],
  Array [
    1266.6666666666667,
    198.87640380859375,
    63.5584716796875,
  ],
  Array [
    1273.3333333333333,
    201.51580810546875,
    62.4600830078125,
  ],
  Array [
    1280,
    204.10882568359375,
    61.3448486328125,
  ],
  Array [
    1286.6666666666667,
    206.65484619140625,
    60.216064453125,
  ],
  Array [
    1293.3333333333333,
    209.1533203125,
    59.07659912109375,
  ],
  Array [
    1300,
    211.6038818359375,
    57.9293212890625,
  ],
  Array [
    1306.6666666666667,
    214.00628662109375,
    56.7767333984375,
  ],
  Array [
    1313.3333333333333,
    216.3603515625,
    55.6212158203125,
  ],
  Array [
    1320,
    218.666015625,
    54.4649658203125,
  ],
  Array [
    1326.6666666666667,
    220.9232177734375,
    53.30999755859375,
  ],
  Array [
    1333.3333333333333,
    223.13214111328125,
    52.1580810546875,
  ],
  Array [
    1340,
    225.29290771484375,
    51.01104736328125,
  ],
  Array [
    1346.6666666666667,
    227.40570068359375,
    49.87030029296875,
  ],
  Array [
    1353.3333333333333,
    229.470947265625,
    48.73724365234375,
  ],
  Array [
    1360,
    231.48883056640625,
    47.61328125,
  ],
  Array [
    1366.6666666666667,
    233.45989990234375,
    46.49951171875,
  ],
  Array [
    1373.3333333333333,
    235.384521484375,
    45.39703369140625,
  ],
  Array [
    1380,
    237.26324462890625,
    44.30670166015625,
  ],
  Array [
    1386.6666666666667,
    239.0965576171875,
    43.22943115234375,
  ],
  Array [
    1393.3333333333333,
    240.885009765625,
    42.166015625,
  ],
  Array [
    1400,
    242.6292724609375,
    41.1170654296875,
  ],
  Array [
    1406.6666666666667,
    244.329833984375,
    40.083251953125,
  ],
  Array [
    1413.3333333333333,
    245.98748779296875,
    39.0650634765625,
  ],
  Array [
    1420,
    247.602783203125,
    38.06292724609375,
  ],
  Array [
    1426.6666666666667,
    249.17645263671875,
    37.0772705078125,
  ],
  Array [
    1433.3333333333333,
    250.709228515625,
    36.10845947265625,
  ],
  Array [
    1440,
    252.20172119140625,
    35.15673828125,
  ],
  Array [
    1446.6666666666667,
    253.65472412109375,
    34.2222900390625,
  ],
  Array [
    1453.3333333333333,
    255.0689697265625,
    33.30535888671875,
  ],
  Array [
    1460,
    256.44512939453125,
    32.40606689453125,
  ],
  Array [
    1466.6666666666667,
    257.7840576171875,
    31.5245361328125,
  ],
  Array [
    1473.3333333333333,
    259.08642578125,
    30.6607666015625,
  ],
  Array [
    1480,
    260.3529052734375,
    29.81488037109375,
  ],
  Array [
    1486.6666666666667,
    261.58441162109375,
    28.98675537109375,
  ],
  Array [
    1493.3333333333333,
    262.78155517578125,
    28.1763916015625,
  ],
  Array [
    1500,
    263.94512939453125,
    27.38372802734375,
  ],
  Array [
    1506.6666666666667,
    265.075927734375,
    26.608642578125,
  ],
  Array [
    1513.3333333333333,
    266.174560546875,
    25.85113525390625,
  ],
  Array [
    1520,
    267.2418212890625,
    25.1109619140625,
  ],
  Array [
    1526.6666666666667,
    268.27850341796875,
    24.3880615234375,
  ],
  Array [
    1533.3333333333333,
    269.28521728515625,
    23.68212890625,
  ],
  Array [
    1540,
    270.2626953125,
    22.9931640625,
  ],
  Array [
    1546.6666666666667,
    271.21173095703125,
    22.32080078125,
  ],
  Array [
    1553.3333333333333,
    272.13287353515625,
    21.66497802734375,
  ],
  Array [
    1560,
    273.02691650390625,
    21.02532958984375,
  ],
  Array [
    1566.6666666666667,
    273.89453125,
    20.4017333984375,
  ],
  Array [
    1573.3333333333333,
    274.736328125,
    19.79388427734375,
  ],
  Array [
    1580,
    275.552978515625,
    19.20166015625,
  ],
  Array [
    1586.6666666666667,
    276.34515380859375,
    18.6246337890625,
  ],
  Array [
    1593.3333333333333,
    277.113525390625,
    18.06268310546875,
  ],
  Array [
    1600,
    277.85858154296875,
    17.51544189453125,
  ],
  Array [
    1606.6666666666667,
    278.5810546875,
    16.98272705078125,
  ],
  Array [
    1613.3333333333333,
    279.28155517578125,
    16.4642333984375,
  ],
  Array [
    1620,
    279.9605712890625,
    15.959716796875,
  ],
  Array [
    1626.6666666666667,
    280.6187744140625,
    15.46893310546875,
  ],
  Array [
    1633.3333333333333,
    281.2567138671875,
    14.99151611328125,
  ],
  Array [
    1640,
    281.8748779296875,
    14.5272216796875,
  ],
  Array [
    1646.6666666666667,
    282.473876953125,
    14.0758056640625,
  ],
  Array [
    1653.3333333333333,
    283.05426025390625,
    13.636962890625,
  ],
  Array [
    1660,
    283.61651611328125,
    13.21044921875,
  ],
  Array [
    1666.6666666666667,
    284.1611328125,
    12.79595947265625,
  ],
  Array [
    1673.3333333333333,
    284.68865966796875,
    12.393310546875,
  ],
  Array [
    1680,
    285.1995849609375,
    12.0020751953125,
  ],
  Array [
    1686.6666666666667,
    285.6943359375,
    11.62213134765625,
  ],
  Array [
    1693.3333333333333,
    286.17340087890625,
    11.253173828125,
  ],
  Array [
    1700,
    286.63720703125,
    10.8948974609375,
  ],
  Array [
    1706.6666666666667,
    287.08624267578125,
    10.547119140625,
  ],
  Array [
    1713.3333333333333,
    287.52093505859375,
    10.20947265625,
  ],
  Array [
    1720,
    287.94171142578125,
    9.8818359375,
  ],
  Array [
    1726.6666666666667,
    288.34893798828125,
    9.56390380859375,
  ],
  Array [
    1733.3333333333333,
    288.7430419921875,
    9.25537109375,
  ],
  Array [
    1740,
    289.12445068359375,
    8.95611572265625,
  ],
  Array [
    1746.6666666666667,
    289.49346923828125,
    8.66583251953125,
  ],
  Array [
    1753.3333333333333,
    289.85052490234375,
    8.38427734375,
  ],
  Array [
    1760,
    290.19598388671875,
    8.1112060546875,
  ],
  Array [
    1766.6666666666667,
    290.53021240234375,
    7.84649658203125,
  ],
  Array [
    1773.3333333333333,
    290.85345458984375,
    7.58978271484375,
  ],
  Array [
    1780,
    291.1661376953125,
    7.34100341796875,
  ],
  Array [
    1786.6666666666667,
    291.46856689453125,
    7.09979248046875,
  ],
  Array [
    1793.3333333333333,
    291.76104736328125,
    6.86602783203125,
  ],
  Array [
    1800,
    292.04388427734375,
    6.6395263671875,
  ],
  Array [
    1806.6666666666667,
    292.3173828125,
    6.4200439453125,
  ],
  Array [
    1813.3333333333333,
    292.581787109375,
    6.2073974609375,
  ],
  Array [
    1820,
    292.83746337890625,
    6.00140380859375,
  ],
  Array [
    1826.6666666666667,
    293.08465576171875,
    5.80181884765625,
  ],
  Array [
    1833.3333333333333,
    293.3236083984375,
    5.60858154296875,
  ],
  Array [
    1840,
    293.55462646484375,
    5.42138671875,
  ],
  Array [
    1846.6666666666667,
    293.77789306640625,
    5.2401123046875,
  ],
  Array [
    1853.3333333333333,
    293.99371337890625,
    5.0645751953125,
  ],
  Array [
    1860,
    294.2022705078125,
    4.8946533203125,
  ],
  Array [
    1866.6666666666667,
    294.40380859375,
    4.73016357421875,
  ],
  Array [
    1873.3333333333333,
    294.5986328125,
    4.57086181640625,
  ],
  Array [
    1880,
    294.78680419921875,
    4.416748046875,
  ],
  Array [
    1886.6666666666667,
    294.96868896484375,
    4.26751708984375,
  ],
  Array [
    1893.3333333333333,
    295.1444091796875,
    4.1231689453125,
  ],
  Array [
    1900,
    295.314208984375,
    3.98345947265625,
  ],
  Array [
    1906.6666666666667,
    295.47821044921875,
    3.8482666015625,
  ],
  Array [
    1913.3333333333333,
    295.63665771484375,
    3.7174072265625,
  ],
  Array [
    1920,
    295.7896728515625,
    3.59088134765625,
  ],
  Array [
    1926.6666666666667,
    295.9375,
    3.46844482421875,
  ],
  Array [
    1933.3333333333333,
    296.080322265625,
    3.35003662109375,
  ],
  Array [
    1940,
    296.21820068359375,
    3.2354736328125,
  ],
  Array [
    1946.6666666666667,
    296.3514404296875,
    3.12469482421875,
  ],
  Array [
    1953.3333333333333,
    296.48004150390625,
    3.017578125,
  ],
  Array [
    1960,
    296.604248046875,
    2.9139404296875,
  ],
  Array [
    1966.6666666666667,
    296.7242431640625,
    2.81378173828125,
  ],
  Array [
    1973.3333333333333,
    296.84002685546875,
    2.7169189453125,
  ],
  Array [
    1980,
    296.95184326171875,
    2.62322998046875,
  ],
  Array [
    1986.6666666666667,
    297.059814453125,
    2.53271484375,
  ],
  Array [
    1993.3333333333333,
    297.1640625,
    2.4451904296875,
  ],
  Array [
    2000,
    297.26470947265625,
    2.36053466796875,
  ],
  Array [
    2006.6666666666667,
    297.10589599609375,
    -9.7720947265625,
  ],
  Array [
    2013.3333333333333,
    296.45989990234375,
    -20.913330078125,
  ],
  Array [
    2020,
    295.36688232421875,
    -31.12396240234375,
  ],
  Array [
    2026.6666666666667,
    293.8646240234375,
    -40.461669921875,
  ],
  Array [
    2033.3333333333333,
    291.98858642578125,
    -48.98089599609375,
  ],
  Array [
    2040,
    289.77191162109375,
    -56.73309326171875,
  ],
  Array [
    2046.6666666666667,
    287.24578857421875,
    -63.766845703125,
  ],
  Array [
    2053.3333333333335,
    284.439208984375,
    -70.12799072265625,
  ],
  Array [
    2060,
    281.3795166015625,
    -75.85992431640625,
  ],
  Array [
    2066.6666666666665,
    278.0921630859375,
    -81.0035400390625,
  ],
  Array [
    2073.3333333333335,
    274.60107421875,
    -85.5975341796875,
  ],
  Array [
    2080,
    270.9283447265625,
    -89.67828369140625,
  ],
  Array [
    2086.6666666666665,
    267.0948486328125,
    -93.2801513671875,
  ],
  Array [
    2093.3333333333335,
    263.11993408203125,
    -96.43560791015625,
  ],
  Array [
    2100,
    259.021728515625,
    -99.1751708984375,
  ],
  Array [
    2106.6666666666665,
    254.81689453125,
    -101.5277099609375,
  ],
  Array [
    2113.3333333333335,
    250.52117919921875,
    -103.52032470703125,
  ],
  Array [
    2120,
    246.1490478515625,
    -105.1785888671875,
  ],
  Array [
    2126.6666666666665,
    241.71405029296875,
    -106.526611328125,
  ],
  Array [
    2133.3333333333335,
    237.22869873046875,
    -107.5870361328125,
  ],
  Array [
    2140,
    232.70458984375,
    -108.38116455078125,
  ],
  Array [
    2146.6666666666665,
    228.15240478515625,
    -108.9290771484375,
  ],
  Array [
    2153.3333333333335,
    223.5821533203125,
    -109.2496337890625,
  ],
  Array [
    2160,
    219.00286865234375,
    -109.360595703125,
  ],
  Array [
    2166.6666666666665,
    214.423095703125,
    -109.27862548828125,
  ],
  Array [
    2173.3333333333335,
    209.8504638671875,
    -109.01934814453125,
  ],
  Array [
    2180,
    205.29217529296875,
    -108.597412109375,
  ],
  Array [
    2186.6666666666665,
    200.75469970703125,
    -108.026611328125,
  ],
  Array [
    2193.3333333333335,
    196.2440185546875,
    -107.3199462890625,
  ],
  Array [
    2200,
    191.765625,
    -106.4893798828125,
  ],
  Array [
    2206.6666666666665,
    187.3243408203125,
    -105.54644775390625,
  ],
  Array [
    2213.3333333333335,
    182.9248046875,
    -104.5015869140625,
  ],
  Array [
    2220,
    178.5709228515625,
    -103.3648681640625,
  ],
  Array [
    2226.6666666666665,
    174.2664794921875,
    -102.14556884765625,
  ],
  Array [
    2233.3333333333335,
    170.0146484375,
    -100.85235595703125,
  ],
  Array [
    2240,
    165.81842041015625,
    -99.49334716796875,
  ],
  Array [
    2246.6666666666665,
    161.68035888671875,
    -98.07611083984375,
  ],
  Array [
    2253.3333333333335,
    157.60272216796875,
    -96.607666015625,
  ],
  Array [
    2260,
    153.58758544921875,
    -95.0947265625,
  ],
  Array [
    2266.6666666666665,
    149.6365966796875,
    -93.5433349609375,
  ],
  Array [
    2273.3333333333335,
    145.7513427734375,
    -91.95916748046875,
  ],
  Array [
    2280,
    141.93304443359375,
    -90.3475341796875,
  ],
  Array [
    2286.6666666666665,
    138.1827392578125,
    -88.71337890625,
  ],
  Array [
    2293.3333333333335,
    134.50128173828125,
    -87.061279296875,
  ],
  Array [
    2300,
    130.8892822265625,
    -85.39544677734375,
  ],
  Array [
    2306.6666666666665,
    127.47528076171875,
    -77.6943359375,
  ],
  Array [
    2313.3333333333335,
    124.37353515625,
    -70.4813232421875,
  ],
  Array [
    2320,
    121.564208984375,
    -63.7293701171875,
  ],
  Array [
    2326.6666666666665,
    119.02850341796875,
    -57.412841796875,
  ],
  Array [
    2333.3333333333335,
    116.7486572265625,
    -51.5072021484375,
  ],
  Array [
    2340,
    114.7080078125,
    -45.98956298828125,
  ],
  Array [
    2346.6666666666665,
    112.8907470703125,
    -40.837890625,
  ],
  Array [
    2353.3333333333335,
    111.281982421875,
    -36.031494140625,
  ],
  Array [
    2360,
    109.86761474609375,
    -31.55072021484375,
  ],
  Array [
    2366.6666666666665,
    108.634521484375,
    -27.376953125,
  ],
  Array [
    2373.3333333333335,
    107.570068359375,
    -23.4925537109375,
  ],
  Array [
    2380,
    106.66259765625,
    -19.8807373046875,
  ],
  Array [
    2386.6666666666665,
    105.90093994140625,
    -16.52569580078125,
  ],
  Array [
    2393.3333333333335,
    105.2747802734375,
    -13.41253662109375,
  ],
  Array [
    2400,
    104.774169921875,
    -10.52691650390625,
  ],
  Array [
    2406.6666666666665,
    104.389892578125,
    -7.85552978515625,
  ],
  Array [
    2413.3333333333335,
    104.11322021484375,
    -5.38555908203125,
  ],
  Array [
    2420,
    103.93603515625,
    -3.10504150390625,
  ],
  Array [
    2426.6666666666665,
    103.8505859375,
    -1.0025634765625,
  ],
  Array [
    2433.3333333333335,
    103.8497314453125,
    0.9326171875,
  ],
  Array [
    2440,
    103.92657470703125,
    2.71075439453125,
  ],
  Array [
    2446.6666666666665,
    104.07476806640625,
    4.34136962890625,
  ],
  Array [
    2453.3333333333335,
    104.288330078125,
    5.83367919921875,
  ],
  Array [
    2460,
    104.5616455078125,
    7.1962890625,
  ],
  Array [
    2466.6666666666665,
    104.8895263671875,
    8.43719482421875,
  ],
  Array [
    2473.3333333333335,
    105.26690673828125,
    9.56427001953125,
  ],
  Array [
    2480,
    105.68927001953125,
    10.5845947265625,
  ],
  Array [
    2486.6666666666665,
    106.1522216796875,
    11.50518798828125,
  ],
  Array [
    2493.3333333333335,
    106.65179443359375,
    12.3323974609375,
  ],
  Array [
    2500,
    107.1842041015625,
    13.0723876953125,
  ],
  Array [
    2506.6666666666665,
    107.745849609375,
    13.73089599609375,
  ],
  Array [
    2513.3333333333335,
    108.33343505859375,
    14.3133544921875,
  ],
  Array [
    2520,
    108.9439697265625,
    14.824951171875,
  ],
  Array [
    2526.6666666666665,
    109.574462890625,
    15.2705078125,
  ],
  Array [
    2533.3333333333335,
    110.222412109375,
    15.654541015625,
  ],
  Array [
    2540,
    110.8851318359375,
    15.9813232421875,
  ],
  Array [
    2546.6666666666665,
    111.56048583984375,
    16.2550048828125,
  ],
  Array [
    2553.3333333333335,
    112.24627685546875,
    16.47930908203125,
  ],
  Array [
    2560,
    112.9404296875,
    16.65789794921875,
  ],
  Array [
    2566.6666666666665,
    113.64117431640625,
    16.7940673828125,
  ],
  Array [
    2573.3333333333335,
    114.3468017578125,
    16.89105224609375,
  ],
  Array [
    2580,
    115.05572509765625,
    16.9517822265625,
  ],
  Array [
    2586.6666666666665,
    115.7664794921875,
    16.9791259765625,
  ],
  Array [
    2593.3333333333335,
    116.47772216796875,
    16.9757080078125,
  ],
  Array [
    2600,
    117.188232421875,
    16.9439697265625,
  ],
  Array [
    2606.6666666666665,
    117.8968505859375,
    16.88629150390625,
  ],
  Array [
    2613.3333333333335,
    118.60260009765625,
    16.8048095703125,
  ],
  Array [
    2620,
    119.30438232421875,
    16.70159912109375,
  ],
  Array [
    2626.6666666666665,
    120.00152587890625,
    16.57861328125,
  ],
  Array [
    2633.3333333333335,
    120.69305419921875,
    16.43756103515625,
  ],
  Array [
    2640,
    121.37835693359375,
    16.28021240234375,
  ],
  Array [
    2646.6666666666665,
    122.05670166015625,
    16.10809326171875,
  ],
  Array [
    2653.3333333333335,
    122.72760009765625,
    15.9227294921875,
  ],
  Array [
    2660,
    123.3905029296875,
    15.7254638671875,
  ],
  Array [
    2666.6666666666665,
    124.04486083984375,
    15.51751708984375,
  ],
  Array [
    2673.3333333333335,
    124.69036865234375,
    15.30023193359375,
  ],
  Array [
    2680,
    125.3265380859375,
    15.07464599609375,
  ],
  Array [
    2686.6666666666665,
    125.95318603515625,
    14.84185791015625,
  ],
  Array [
    2693.3333333333335,
    126.56988525390625,
    14.60272216796875,
  ],
  Array [
    2700,
    127.17645263671875,
    14.3582763671875,
  ],
  Array [
    2706.6666666666665,
    127.772705078125,
    14.10931396484375,
  ],
  Array [
    2713.3333333333335,
    128.3583984375,
    13.85662841796875,
  ],
  Array [
    2720,
    128.9334716796875,
    13.60089111328125,
  ],
  Array [
    2726.6666666666665,
    129.497802734375,
    13.34283447265625,
  ],
  Array [
    2733.3333333333335,
    130.05126953125,
    13.08306884765625,
  ],
  Array [
    2740,
    130.59381103515625,
    12.8221435546875,
  ],
  Array [
    2746.6666666666665,
    131.12542724609375,
    12.56060791015625,
  ],
  Array [
    2753.3333333333335,
    131.6461181640625,
    12.29901123046875,
  ],
  Array [
    2760,
    132.15582275390625,
    12.03765869140625,
  ],
  Array [
    2766.6666666666665,
    132.65460205078125,
    11.777099609375,
  ],
  Array [
    2773.3333333333335,
    133.1424560546875,
    11.51763916015625,
  ],
  Array [
    2780,
    133.6195068359375,
    11.2596435546875,
  ],
  Array [
    2786.6666666666665,
    134.08575439453125,
    11.00347900390625,
  ],
  Array [
    2793.3333333333335,
    134.5413818359375,
    10.74932861328125,
  ],
  Array [
    2800,
    134.986328125,
    10.49755859375,
  ],
  Array [
    2806.6666666666665,
    135.42083740234375,
    10.248291015625,
  ],
  Array [
    2813.3333333333335,
    135.84490966796875,
    10.00189208984375,
  ],
  Array [
    2820,
    136.2587890625,
    9.7584228515625,
  ],
  Array [
    2826.6666666666665,
    136.6624755859375,
    9.51806640625,
  ],
  Array [
    2833.3333333333335,
    137.05621337890625,
    9.281005859375,
  ],
  Array [
    2840,
    137.4400634765625,
    9.04742431640625,
  ],
  Array [
    2846.6666666666665,
    137.814208984375,
    8.8173828125,
  ],
  Array [
    2853.3333333333335,
    138.1788330078125,
    8.5909423828125,
  ],
  Array [
    2860,
    138.53399658203125,
    8.3682861328125,
  ],
  Array [
    2866.6666666666665,
    138.87994384765625,
    8.14947509765625,
  ],
  Array [
    2873.3333333333335,
    139.216796875,
    7.9344482421875,
  ],
  Array [
    2880,
    139.544677734375,
    7.723388671875,
  ],
  Array [
    2886.6666666666665,
    139.86383056640625,
    7.51629638671875,
  ],
  Array [
    2893.3333333333335,
    140.1744384765625,
    7.313232421875,
  ],
  Array [
    2900,
    140.4765625,
    7.1141357421875,
  ],
  Array [
    2906.6666666666665,
    140.7705078125,
    6.9190673828125,
  ],
  Array [
    2913.3333333333335,
    141.0562744140625,
    6.72802734375,
  ],
  Array [
    2920,
    141.33416748046875,
    6.541015625,
  ],
  Array [
    2926.6666666666665,
    141.60430908203125,
    6.3580322265625,
  ],
  Array [
    2933.3333333333335,
    141.86688232421875,
    6.1790771484375,
  ],
  Array [
    2940,
    142.1220703125,
    6.00408935546875,
  ],
  Array [
    2946.6666666666665,
    142.36993408203125,
    5.83306884765625,
  ],
  Array [
    2953.3333333333335,
    142.61077880859375,
    5.66595458984375,
  ],
  Array [
    2960,
    142.84466552734375,
    5.50274658203125,
  ],
  Array [
    2966.6666666666665,
    143.07183837890625,
    5.3433837890625,
  ],
  Array [
    2973.3333333333335,
    143.2923583984375,
    5.1878662109375,
  ],
  Array [
    2980,
    143.5064697265625,
    5.03607177734375,
  ],
  Array [
    2986.6666666666665,
    143.71429443359375,
    4.88800048828125,
  ],
  Array [
    2993.3333333333335,
    143.916015625,
    4.74365234375,
  ],
  Array [
    3000,
    144.11175537109375,
    4.6029052734375,
  ],
  Array [
    3006.6666666666665,
    144.30169677734375,
    4.4656982421875,
  ],
  Array [
    3013.3333333333335,
    144.4859619140625,
    4.33203125,
  ],
  Array [
    3020,
    144.6646728515625,
    4.2017822265625,
  ],
  Array [
    3026.6666666666665,
    144.8380126953125,
    4.074951171875,
  ],
  Array [
    3033.3333333333335,
    145.006103515625,
    3.95147705078125,
  ],
  Array [
    3040,
    145.1690673828125,
    3.83123779296875,
  ],
  Array [
    3046.6666666666665,
    145.32708740234375,
    3.7142333984375,
  ],
  Array [
    3053.3333333333335,
    145.48028564453125,
    3.600341796875,
  ],
  Array [
    3060,
    145.6287841796875,
    3.4896240234375,
  ],
  Array [
    3066.6666666666665,
    145.77264404296875,
    3.3818359375,
  ],
  Array [
    3073.3333333333335,
    145.912109375,
    3.277099609375,
  ],
  Array [
    3080,
    146.0472412109375,
    3.17523193359375,
  ],
  Array [
    3086.6666666666665,
    146.17816162109375,
    3.076171875,
  ],
  Array [
    3093.3333333333335,
    146.30499267578125,
    2.97998046875,
  ],
  Array [
    3100,
    146.4278564453125,
    2.88641357421875,
  ],
  Array [
    3106.6666666666665,
    146.546875,
    2.79559326171875,
  ],
  Array [
    3113.3333333333335,
    146.662109375,
    2.707275390625,
  ],
  Array [
    3120,
    146.773681640625,
    2.62158203125,
  ],
  Array [
    3126.6666666666665,
    146.88177490234375,
    2.538330078125,
  ],
  Array [
    3133.3333333333335,
    146.98638916015625,
    2.45745849609375,
  ],
  Array [
    3140,
    147.087646484375,
    2.3790283203125,
  ],
  Array [
    3146.6666666666665,
    147.18572998046875,
    2.3028564453125,
  ],
  Array [
    3153.3333333333335,
    147.2806396484375,
    2.22894287109375,
  ],
  Array [
    3160,
    147.37249755859375,
    2.15716552734375,
  ],
  Array [
    3166.6666666666665,
    147.46136474609375,
    2.08758544921875,
  ],
  Array [
    3173.3333333333335,
    147.54736328125,
    2.02008056640625,
  ],
  Array [
    3180,
    147.630615234375,
    1.95458984375,
  ],
  Array [
    3186.6666666666665,
    147.711181640625,
    1.89105224609375,
  ],
  Array [
    3193.3333333333335,
    147.7890625,
    1.8294677734375,
  ],
  Array [
    3200,
    147.86444091796875,
    1.76971435546875,
  ],
  Array [
    3206.6666666666665,
    147.9373779296875,
    1.71185302734375,
  ],
  Array [
    3213.3333333333335,
    148.00787353515625,
    1.65570068359375,
  ],
  Array [
    3220,
    148.07611083984375,
    1.60125732421875,
  ],
  Array [
    3226.6666666666665,
    148.14208984375,
    1.548583984375,
  ],
  Array [
    3233.3333333333335,
    148.20587158203125,
    1.4974365234375,
  ],
  Array [
    3240,
    148.26751708984375,
    1.44793701171875,
  ],
  Array [
    3246.6666666666665,
    148.3271484375,
    1.39996337890625,
  ],
  Array [
    3253.3333333333335,
    148.38482666015625,
    1.353515625,
  ],
  Array [
    3260,
    148.44061279296875,
    1.3084716796875,
  ],
  Array [
    3266.6666666666665,
    148.4945068359375,
    1.264892578125,
  ],
  Array [
    3273.3333333333335,
    148.54656982421875,
    1.22265625,
  ],
  Array [
    3280,
    148.596923828125,
    1.1817626953125,
  ],
  Array [
    3286.6666666666665,
    148.64556884765625,
    1.1422119140625,
  ],
  Array [
    3293.3333333333335,
    148.692626953125,
    1.1038818359375,
  ],
  Array [
    3300,
    148.73809814453125,
    1.0667724609375,
  ],
  Array [
    3306.6666666666665,
    148.78204345703125,
    1.03082275390625,
  ],
  Array [
    3313.3333333333335,
    148.824462890625,
    0.99603271484375,
  ],
  Array [
    3320,
    148.865478515625,
    0.96240234375,
  ],
  Array [
    3326.6666666666665,
    148.90509033203125,
    0.92987060546875,
  ],
  Array [
    3333.3333333333335,
    148.94342041015625,
    0.8983154296875,
  ],
  Array [
    3340,
    148.98040771484375,
    0.86785888671875,
  ],
  Array [
    3346.6666666666665,
    149.01611328125,
    0.83831787109375,
  ],
  Array [
    3353.3333333333335,
    149.05059814453125,
    0.809814453125,
  ],
  Array [
    3360,
    149.083984375,
    0.78216552734375,
  ],
  Array [
    3366.6666666666665,
    149.11614990234375,
    0.7554931640625,
  ],
  Array [
    3373.3333333333335,
    149.14727783203125,
    0.7296142578125,
  ],
  Array [
    3380,
    149.17730712890625,
    0.70465087890625,
  ],
  Array [
    3386.6666666666665,
    149.206298828125,
    0.68048095703125,
  ],
  Array [
    3393.3333333333335,
    149.23431396484375,
    0.6571044921875,
  ],
  Array [
    3400,
    149.2613525390625,
    0.634521484375,
  ],
  Array [
    3406.6666666666665,
    149.2874755859375,
    0.6126708984375,
  ],
  Array [
    3413.3333333333335,
    149.31268310546875,
    0.591552734375,
  ],
  Array [
    3420,
    149.3370361328125,
    0.57110595703125,
  ],
  Array [
    3426.6666666666665,
    149.36053466796875,
    0.5513916015625,
  ],
  Array [
    3433.3333333333335,
    149.38323974609375,
    0.53228759765625,
  ],
  Array [
    3440,
    149.4051513671875,
    0.51385498046875,
  ],
  Array [
    3446.6666666666665,
    149.42633056640625,
    0.49603271484375,
  ],
  Array [
    3453.3333333333335,
    149.44671630859375,
    0.47882080078125,
  ],
  Array [
    3460,
    149.4664306640625,
    0.462158203125,
  ],
  Array [
    3466.6666666666665,
    149.4854736328125,
    0.446044921875,
  ],
  Array [
    3473.3333333333335,
    149.5037841796875,
    0.4305419921875,
  ],
  Array [
    3480,
    149.52154541015625,
    0.41546630859375,
  ],
  Array [
    3486.6666666666665,
    149.53863525390625,
    0.4010009765625,
  ],
  Array [
    3493.3333333333335,
    149.55511474609375,
    0.386962890625,
  ],
  Array [
    3500,
    149.571044921875,
    0.3734130859375,
  ],
  Array [
    3506.6666666666665,
    149.58642578125,
    0.36029052734375,
  ],
  Array [
    3513.3333333333335,
    149.60125732421875,
    0.34765625,
  ],
  Array [
    3520,
    149.61553955078125,
    0.33544921875,
  ],
  Array [
    3526.6666666666665,
    149.62933349609375,
    0.32366943359375,
  ],
  Array [
    3533.3333333333335,
    149.64263916015625,
    0.312255859375,
  ],
  Array [
    3540,
    149.655517578125,
    0.30126953125,
  ],
  Array [
    3546.6666666666665,
    149.66790771484375,
    0.2906494140625,
  ],
  Array [
    3553.3333333333335,
    149.67987060546875,
    0.2803955078125,
  ],
  Array [
    3560,
    149.69140625,
    0.2705078125,
  ],
  Array [
    3566.6666666666665,
    149.7025146484375,
    0.26092529296875,
  ],
  Array [
    3573.3333333333335,
    149.7132568359375,
    0.251708984375,
  ],
  Array [
    3580,
    149.7236328125,
    0.2427978515625,
  ],
  Array [
    3586.6666666666665,
    149.733642578125,
    0.23419189453125,
  ],
  Array [
    3593.3333333333335,
    149.74322509765625,
    0.225830078125,
  ],
  Array [
    3600,
    149.7525634765625,
    0.21783447265625,
  ],
  Array [
    3606.6666666666665,
    149.761474609375,
    0.2100830078125,
  ],
  Array [
    3613.3333333333335,
    149.7701416015625,
    0.20257568359375,
  ],
  Array [
    3620,
    149.77850341796875,
    0.19537353515625,
  ],
  Array [
    3626.6666666666665,
    149.7864990234375,
    0.18841552734375,
  ],
  Array [
    3633.3333333333335,
    149.79425048828125,
    0.18170166015625,
  ],
  Array [
    3640,
    149.8017578125,
    0.17523193359375,
  ],
  Array [
    3646.6666666666665,
    149.8089599609375,
    0.1689453125,
  ],
  Array [
    3653.3333333333335,
    149.81591796875,
    0.16290283203125,
  ],
  Array [
    3660,
    149.82257080078125,
    0.1571044921875,
  ],
  Array [
    3666.6666666666665,
    149.82904052734375,
    0.15142822265625,
  ],
  Array [
    3673.3333333333335,
    149.83526611328125,
    0.14599609375,
  ],
  Array [
    3680,
    149.84130859375,
    0.14080810546875,
  ],
  Array [
    3686.6666666666665,
    149.84710693359375,
    0.1357421875,
  ],
  Array [
    3693.3333333333335,
    149.8526611328125,
    0.130859375,
  ],
  Array [
    3700,
    149.8580322265625,
    0.12615966796875,
  ],
  Array [
    3706.6666666666665,
    149.86322021484375,
    0.12158203125,
  ],
  Array [
    3713.3333333333335,
    149.86822509765625,
    0.11724853515625,
  ],
  Array [
    3720,
    149.873046875,
    0.11297607421875,
  ],
  Array [
    3726.6666666666665,
    149.877685546875,
    0.10894775390625,
  ],
  Array [
    3733.3333333333335,
    149.8822021484375,
    0.10498046875,
  ],
  Array [
    3740,
    149.88653564453125,
    0.1011962890625,
  ],
  Array [
    3746.6666666666665,
    149.89068603515625,
    0.0975341796875,
  ],
  Array [
    3753.3333333333335,
    149.8946533203125,
    0.093994140625,
  ],
  Array [
    3760,
    149.8985595703125,
    0.09063720703125,
  ],
  Array [
    3766.6666666666665,
    149.90228271484375,
    0.08734130859375,
  ],
  Array [
    3773.3333333333335,
    149.9058837890625,
    0.08416748046875,
  ],
  Array [
    3780,
    149.9093017578125,
    0.08111572265625,
  ],
  Array [
    3786.6666666666665,
    149.91265869140625,
    0.07818603515625,
  ],
  Array [
    3793.3333333333335,
    149.9158935546875,
    0.0753173828125,
  ],
  Array [
    3800,
    149.9189453125,
    0.07257080078125,
  ],
  Array [
    3806.6666666666665,
    149.92193603515625,
    0.0699462890625,
  ],
  Array [
    3813.3333333333335,
    149.9248046875,
    0.0673828125,
  ],
  Array [
    3820,
    149.9276123046875,
    0.06494140625,
  ],
  Array [
    3826.6666666666665,
    149.9302978515625,
    0.06256103515625,
  ],
  Array [
    3833.3333333333335,
    149.932861328125,
    0.060302734375,
  ],
  Array [
    3840,
    149.935302734375,
    0.05810546875,
  ],
  Array [
    3846.6666666666665,
    149.937744140625,
    0.05596923828125,
  ],
  Array [
    3853.3333333333335,
    149.94000244140625,
    0.053955078125,
  ],
  Array [
    3860,
    149.9422607421875,
    0.052001953125,
  ],
  Array [
    3866.6666666666665,
    149.94439697265625,
    0.050048828125,
  ],
  Array [
    3873.3333333333335,
    149.9464111328125,
    0.0482177734375,
  ],
  Array [
    3880,
    149.94842529296875,
    0.04644775390625,
  ],
  Array [
    3886.6666666666665,
    149.9503173828125,
    0.0447998046875,
  ],
  Array [
    3893.3333333333335,
    149.9521484375,
    0.04315185546875,
  ],
  Array [
    3900,
    149.95391845703125,
    0.04156494140625,
  ],
  Array [
    3906.6666666666665,
    149.95562744140625,
    0.0400390625,
  ],
  Array [
    3913.3333333333335,
    149.957275390625,
    0.03857421875,
  ],
  Array [
    3920,
    149.9588623046875,
    0.03717041015625,
  ],
  Array [
    3926.6666666666665,
    149.96038818359375,
    0.0357666015625,
  ],
  Array [
    3933.3333333333335,
    149.9619140625,
    0.03448486328125,
  ],
  Array [
    3940,
    149.96331787109375,
    0.033203125,
  ],
  Array [
    3946.6666666666665,
    149.96466064453125,
    0.031982421875,
  ],
  Array [
    3953.3333333333335,
    149.96600341796875,
    0.03082275390625,
  ],
  Array [
    3960,
    149.96722412109375,
    0.0296630859375,
  ],
  Array [
    3966.6666666666665,
    149.96844482421875,
    0.028564453125,
  ],
  Array [
    3973.3333333333335,
    149.96966552734375,
    0.02752685546875,
  ],
  Array [
    3980,
    149.97076416015625,
    0.0264892578125,
  ],
  Array [
    3986.6666666666665,
    149.97186279296875,
    0.0255126953125,
  ],
  Array [
    3993.3333333333335,
    149.972900390625,
    0.02459716796875,
  ],
  Array [
    4000,
    149.97393798828125,
    0.023681640625,
  ],
]
`;
